--- a/source/_posts/浪急风高（微博号：老蛮频段-2023-06-14）.md
+++ b/source/_posts/浪急风高（微博号：老蛮频段-2023-06-14）.md
@@ -1,4 +1,4 @@
-title: 浪急风高（微博号：老蛮频段 2023.06.14 - 2023.06.17）
+title: 浪急风高（微博号：老蛮频段 2023.06.14 - 2023.06.19）
 author: laoman
 date: 2023-06-14 20:18:38
 tags:
@@ -125,6 +125,50 @@ tags:
 4、无法做中长期规划，于是企业家停止了固定资产投资。
 
 不管接下来的“主动作为”的政策是什么，请从上面四点入手。如果觉得无从下手，请什么都不要做，安静三年，上面四点自然就解决了。谢谢了。
+- - -
+6.18
+
+我要放个大招，财政上的出口退税数据比对：
+
+今年1季度出口退税5531亿，同比去年一季度的4971亿，增幅11.3%。
+
+今年4月份当月，出口退税1291亿人民币，同比去年4月份的1958亿，降幅达到惊人的34.1%。
+
+今年5月份当月，出口退税1192亿人民币，同比去年5月份的1589亿，降幅依然高达25.0%。
+
+企业但凡能有申请出口退税的机会，绝对不会错过，法规上的规定是报关后90天内申请，事实上企业连一天延误都不会有，每个月都会申报一次，才不会真的延迟到第90天才申报。这个月的出口退税情况，大致反应的就是上个月的真实出口情况。
+
+4-5月份的出口退税出现如此降幅，这大概反应的就是3-4月份的真实出口情况。也唯有这种降幅，才对得起出口企业今年以来在各种公开媒介上的痛哭失声。至于海关那边一直坚持出口只是微降，按人民币计价恨不得还有所增长，唉，我真是不想评价了。
+- - -
+2022年，我国各种增值税直接缓缴以及留抵退税（也就是先退税给你，第二年再交上）措施，合计缓缴增值税规模约2.5万亿。从今年4月份开始，这笔缓缴的税款都必须要逐步补缴了。即使现在企业的经营情况比2022年还糟糕，总之必须补缴。
+
+在这种情况下，4-5月份全国增值税收入10512亿，这个数据已经加上了补缴的税款。而2022年同期为-2645亿，这是当时执行退税所致，没法与现在的数据进行比对。追溯到2021年，4-5月的增值税收入为10769亿。
+也就是说今年的增值税收入，即使加上了补缴的部分，依然比不上2021年。
+
+再考虑企业所得税，这个领域没有缓缴政策，可以拿来比对。今年4-5月的收入为11091亿，对比2022年同期的12515亿，同比降幅11.4%。去年4-5月那么惨烈的境况，今年的企业所得税比去年还不如。
+
+在企业层面，今年日子就很难过了，真的是交不上税了。这一把2万多亿的增值税补缴，我估计对很多企业来说，乃是无法承受的重负，直接就属于敲骨吸髓了。会死在这件事上的企业，我估计一定不在少数。
+- - -
+6.19
+
+王朝的末世之相：
+1、有灾不赈，任由灾民在苦难中挣扎死去。
+2、横征暴敛，为了维持大手大脚的财政支出而持续扩大税收水平，乃至在灾区依然疯狂征税。
+3、吏治腐化，官吏晋升实行逆淘汰机制，即诚心任事者被优先淘汰，虚浮拍马者升迁最快。
+4、司法腐化，冤案层出不穷，乃至成为污吏索贿的手段。
+5、外敌悍然入侵，而内部的权斗依然不止，无法实施有效动员。
+
+达成这五点成就，王朝必然覆灭，旦夕之间而已。
+- - -
+
+好消息好消息，我正在着手做一件非常有趣的工作：总结日本自90年地产泡沫破灭之后走过的路——企业出海。下图是日本最典型的企业代表，汽车企业的出海之路。2022年的日本海外汽车产量，已经超过了其国内产量的两倍。
+而日本海外企业创造的利润之大，对日本国内的反哺之厚，简直令人难以置信。这些数据，我都会在本期视频中详细的展示给各位。
+
+睁开眼睛看世界，看看中国的产业竞争对手们的发展之路，乃是最好的学习方式，没有之一。
+- - -
+说出来你们可能不信。日本2022年底的对外投资净存量规模为20822亿美元，而中国为27950亿美元，比日本高出34.2%。
+
+日本的这2万多亿美元的存量投资，是肉眼可见的。遍布全球的日本汽车企业和电子零配件企业，源源不断的创造收益回流日本本土。中国这两万八千亿美元的存量投资，我很早就在《谜一样的中国对外投资》一文里提出了这个问题了：它们到底在哪里？在海外的哪个行业里？金融业是没有的，制造业也没什么东西，建筑业沉淀不了这么多资金，采矿业和码头航运业的那几宗收购都是全球瞩目，总金额也十分有限。这些钱到底在哪里？
 - - -
 **收集整理跟踪不易，随缘赞赏，以示鼓励。**
 
