--- a/source/_posts/之后（微博：老蛮频段-2023-06-20）.md
+++ b/source/_posts/之后（微博：老蛮频段-2023-06-20）.md
@@ -1,4 +1,4 @@
-title: 89之后（微博：老蛮频段 2023.06.20）
+title: 89之后（微博：老蛮频段 2023.06.20 - 2023.06.25）
 author: laoman
 date: 2023-06-20 18:16:15
 tags:
@@ -20,3 +20,75 @@ tags:
 今天我们回顾历史，89年之后的通胀潮、分税制、下岗潮、地产泡沫，以及因为中国不执行44项关键入世承诺中的22项，而爆发的贸易战，全都与89学潮，有着直接的因果关系。
 
 这样穿透时间的因果，每每思及，莫不感慨万千。
+- - -
+6.21
+
+整个金融市场都在消化两个现实：1、复苏证伪。经济很确定不会再有任何复苏，此后就是漫长的下行。2、中美脱钩。布林肯过来说了说套话，其实就是没有成果，美国方面和中国方面都没打算谈出什么成果，最多就是即便发生战争依然保证有个沟通渠道的意思。
+
+因此股市汇市债市楼市都开始往长期萧条的逻辑上走。市场到现在算是终于就萧条的前景达成共识了。这种共识其实很吓人，分分钟就是死亡螺旋。
+- - -
+做完日本篇，我最大的感慨就是，财阀这种在中国一直被塑造为罪恶的存在，却一直坚实的支撑着日本整个国家的实业发展之路。
+
+日本财阀直接或间接持有日本九成的国债，是整个日本国家信用的最大支撑。可以这么说，只要财阀不放弃日本，日美欧中这四大经济体的末日赛跑，日本就永远跑在第一名，把后面三位，远远抛在身后。
+- - -
+6.22
+
+全网都在传中国近四年来对外援助金额超过6万亿人民币的事。这数据到底哪里来的啊？
+有些文章说这是环球网上报的料，我查来查去没看到原文。
+
+如果要说官方数据的话，对外援助类的数据体现在外汇管理局的《国际收支平衡表》的“二次收入”项目，2019-2022年，中国获得的国际援助类总金额1554亿美元（贷方），付出去的国际援助类总金额1017亿美元（借方）。在这个领域，中国一直以来都是挣钱的，获得的援助比花出去的多。当然2023年美日欧基本停止了对华援助项目，我估计2023年这方面的数据应该会转负。
+
+6万亿人民币，折约九千亿美元，跟近四年千把亿对外援助的金额差距实在太大。我个人找不到这个数据的出处。谁找到了官方出处可以跟我说一声。
+- - -
+拜登美国时间昨天白天在演讲中胡说八道，引发中国方面暴怒。从昨天到今天，越闹越大。这次中美会面本来就没啥成果，现在连脸皮都撕破了，两边的关系直接降到了冰点。
+以现在全球哗然并纷纷拿这件事做文章拱火添油的气氛来看，我估摸着中美连日常沟通渠道都不会建立了。
+
+而中美关系冰冻，欧洲日本韩国，东南亚，包括俄罗斯，其实都是喜闻乐见的。
+- - -
+6.23
+
+泰坦号潜艇内爆的灾难，就是管理上的灾难。
+从未检测的艇身，
+从没有获得的深潜执照，
+从未建立的潜艇状态监控系统，
+随意的内部改装，
+无所谓的动力系统和儿戏的操控系统，
+炒掉有经验的老员工以节省成本。
+这一切合在一起，就是单张票价25万美元的深海探险项目。 
+- - -
+中美对抗的局面之所以能够形成，最大的问题就在于：整个欧美世界越来越左，越来越丧失三观层面的吸引力。
+
+本来小康之后的一二线城市的居民，已经逐渐接受了自由、民主这类大词。结果这四五年来，欧美自己把这些大词毁得不轻。民主变成了民粹，自由变成了黑人优先、同性恋优先和环保优先。在普通中国人看来，这特么都是些啥玩意，能把人恶心死。
+
+在哪里都是恶心，为啥非得支持欧美的恶心玩意？
+
+所以中美对抗的氛围逐渐浓厚之后，至少在国内民间的舆论层面，一二线城市支持美国的一方并没有获得明显的舆论优势。在人口占七成广大的四五线乡镇地区，贬斥美国的言论更是占到了绝大多数。你说你搞个选举，连在任总统都骂选举舞弊，完了还有几十万人冲击国会，你跟我说你的价值观比我的高贵？我可去你妹的吧。
+
+既然民意如此，那中国跟美国对抗的底气，也是坚实无比，根本不在乎要不要跟你美国建立什么沟通渠道。
+- - -
+这几天的金融市场的核心话题，人民币汇率崩了。
+
+我们需要建立的一个基础概念：近年来，尤其是近四五年来，人民币汇率的主战场都在离岸市场，而不是在国内。并且近期主战场有清晰的从香港转去新加坡的迹象。这是因为离岸人民币规模日益膨大，并建立起了复杂的杠杆交易体系，成为了国际自由交易品种。国内只能跟随这套离岸汇率定价系统，毫无办法。
+
+今年以来，离岸人民币对美元汇率从最低6.706一路贬到这一刻的7.222，贬值幅度7.7%。看起来中国央行似乎放弃了此前逢七必守的策略，放弃挣扎了。
+
+对于汇率，中国此前一直十分纠结，一定要维护汇率稳定的原因在于，中国既有外贸依赖，也有外资依赖。人民币对美元贬值，固然可以促进外贸，外贸对中国经济而言，重要性不言而喻。
+
+然而另一方面，人民币贬值又会促使境内的外资换出逃，留在境内就是长期巨亏，外资根本受不了。而外资资产，占央行资产的一半以上，是人民币信用的基石；同时外资工业企业资产也占整个工业企业资产的三成。这些外资资产的出逃，中国经济一样承受不了。
+
+现在的人民币汇率失守的根本原因，其实就是外资持续出逃。前面三年已经在逃了，这半年中国经济复苏的期望被证伪，跟欧美之间又闹成这样，外资出逃速度只会更快。央行要在离岸市场捍卫汇率，操作手法简单粗暴成本极高，被外国炒家当成提款机，反复割央行的韭菜，这种守汇率的成本，根本就不比外资的出逃量少。我估摸着央行已经想明白了，这么守下去根本就是无底洞，不如就此撒手算了。
+
+这就是离岸人民币市场做大之后的悲剧，再也不可能让央行自己随便给汇率定价，毫无办法。接下来中国只能承受外资撤离给整个货币体系、银行体系和工业体系带来的致命冲击了。
+- - -
+这样，我这个月内就把【变法者们】倒数第二集李鸿章篇做出来。【变法者们系列】讲述的其实是中华帝国的形成过程，以及核心治理逻辑的演变。在张居正之后，中华帝国进入黑暗时代，而整个中华大地期待着的，是能够重新带来光明和希望的人。
+李鸿章让世人失望了，他辜负了历史曾经赋予他的责任。在李鸿章之后，再也没有人达到过李鸿章的位置，可以相对最为便利的重启光明。而我们需要追问的是为什么。为什么李鸿章拒绝自己的历史责任？为什么光明从此无法重启？而理解了这些，我们对于当下，会有更加深刻的理解。
+- - -
+6.25
+
+整个金融市场原本都以为端午期间国内会有重大经济刺激措施出台，毕竟是6月最后几天了，要赶在下半年到来之前出台，才能给奄奄一息的经济再打一针兴奋剂。
+
+结果等来等去，等到一场俄罗斯的半截叛乱。
+
+这事对中国的警示作用就一条：要继续加强对民间的监管，把一切不安定的苗头全都扼杀在萌芽状态。
+
+我估摸着接下来经济工作的重要性要完全让位给监管工作。加强监管才是第一位的了。
