--- a/source/_posts/之后（微博：老蛮频段-2023-06-20）.md
+++ b/source/_posts/之后（微博：老蛮频段-2023-06-20）.md
@@ -92,3 +92,42 @@ tags:
 这事对中国的警示作用就一条：要继续加强对民间的监管，把一切不安定的苗头全都扼杀在萌芽状态。
 
 我估摸着接下来经济工作的重要性要完全让位给监管工作。加强监管才是第一位的了。
+- - -
+6.27
+
+这就是我一再强调的，中国即将施行的，大抑制模型的具体体现。
+
+一直以来的财富总动员模式已经不可持续，无法再向老百姓提供新的致富的机会，那么唯有完全反转过来，采取严厉的社会管控措施，把所有不安定的苗头全部扼杀在萌芽状态。
+这几天俄罗斯的叛乱以及随后不可收拾的乱局，当然会加快大抑制模型的全面实施。这是个人无法抵抗的趋势。
+
+思想、文化、技术、出行，在大抑制模型之下，都会受到严厉的管控，更不要说润了。
+
+![](/images/20230630001.jpg)
+- - -
+6.28
+
+一句话说经济：
+
+根据国家统计局刚刚发布的数据：2023年1-5月，规模以上私营工业企业利润6838亿，而去年同期为10071亿。绝对值同比降幅32.1%。较4月份31.5%的同比降幅，有所扩大。 
+- - -
+2010年，我讲述房价的本质：房价是城市的经济水平和配套服务水平，在住宅之上的价格体现。
+
+城市本身的产业经济，和城市提供的医疗、教育、商贸、休闲等等综合配套服务，合起来决定了房价的高低。
+
+那个时候的我坚定的看好很多城市的房价，赞扬过很多城市极具特色的基础产业和配套服务。
+
+一直到2016年，我因为无法接受去库存的玩法，对房价的突然的全面暴涨提出尖锐批评，指出这种暴涨完全脱离了城市经济与配套服务的基础，成为了空中楼阁。于是我成为了无数人的眼中钉，所谓专业唱空一万年。
+
+今时今日，房价泡沫已经在破灭之中了，我的看法还是：房价回到2016年，才算是脱离了泡沫，回归了基础。
+- - -
+萧条已经被所有数据，被日常经验，被口耳相传所证明了。不过你们不要期待会有任何政策上的应对或者变化，绝对不会有。
+
+我再强调一次，前面三年经过了实践反复检验的大抑制模型，就是既定的应对路线。
+
+不要抱有其它任何幻想了。现实就是这样，各位唯一可以做的，就是抱紧自己，迎接寒冬。 
+- - -
+6.29
+
+我特么必须记录一下这个历史性场面，一颗新下场的老韭菜与一头资深的老忽悠，合流了！这种场面真的是，比现在俄罗斯满大街抓反贼还好玩。 
+
+![](/images/20230630002.jpg)
