--- a/source/_posts/之后（微博：老蛮频段-2023-06-20）.md
+++ b/source/_posts/之后（微博：老蛮频段-2023-06-20）.md
@@ -1,4 +1,4 @@
-title: 89之后（微博：老蛮频段 2023.06.20 - 2023.06.25）
+title: 89之后（微博：老蛮频段 2023.06.20 - 2023.07.3）
 author: laoman
 date: 2023-06-20 18:16:15
 tags:
@@ -131,3 +131,61 @@ tags:
 我特么必须记录一下这个历史性场面，一颗新下场的老韭菜与一头资深的老忽悠，合流了！这种场面真的是，比现在俄罗斯满大街抓反贼还好玩。 
 
 ![](/images/20230630002.jpg)
+- - -
+中国的金融监管大致处于严厉与宽松的两极来回游荡的随机状态。你说它不严吧，你开个户恨不得要倒查八代，时不时就要证明你妈是你妈不然就取不了钱。你说它严吧，离岸人民币的总量它连完整统计都没有，对于手背肩扛用蛇皮袋拎到境外去的海量人民币，它连相对系统的做一下估算都做不出来。
+
+大概就是老实人被管得越来越严，胆子大的一笑而过。
+- - -
+6.30
+
+首先恭喜在美的正常华人，在他们的坚持之下，美国最高法以6-3判决Affirmative action违宪。这个平权法案，也就是美国大学招生的时候优先招黑人和同性恋，减少招收成绩优秀的华人。这种扯淡搞法被确认违宪。
+对这一判决，美国所有左派，包括总统拜登和黄左，都在破口大骂。呵呵。左派真是人类之癌啊。
+- - -
+美国2020年1月13日取消中国的“汇率操纵国”身份认定，从此提都不再提这件事。因为到这个时候，人民币汇率已经不再由中国央行一纸文件来确定，而是由规模庞大的离岸人民币市场确定，并且这个市场的交易品种极其丰富，杠杆想加多少倍就加多少倍，多大的资金都能吃下，做空做多都没有限制，完完全全的市场化，根本操控不了。
+
+在离岸人民币市场，中国央行也只能老老实实的充当交易一方，付出真金白银买进卖出，影响交易价格。这种交易是完全市场化的，为了捍卫离岸汇率就必须付出美元，根本无法投机取巧。
+
+所以，现在的人民币汇率，就是市场定价。央行有钱在离岸进行操作，这本身也是市场的一部分。人民币汇率现在的走势，已经是包含了捍卫措施在内的走势。它就应该是这么走，就是合理定价，并没有低估或者高估的成分。
+- - -
+7.1
+
+总结一下，在24小时之内，美国最高法连出三份判决以对抗美国的极左浪潮，开始了法律意义上的纠偏，真是很有意思的事。第一个判决，美最高法判决各大学明文优先招收黑人的做法违宪。招生必须以成绩为优先依据，而不是以肤色为优先依据。这件事的有趣之处在于，本判决可以扩张到整个教育和就业领域，任何机构和企业都不可以明文规定黑人优先，或者同性恋优先，这都是违宪的。
+恰恰因为这种扩张性，对这份判决，美国或蠢或坏的左派掀起了盛势巨大的骂潮。总统拜登带头狂喷，各大学校纷纷表态会对抗最高法，拒绝执行该判决。
+
+第二，美最高法判决拜登政府免除大学生贷款的做法违宪。这笔贷款累积总额达到四千亿美元，最高法认为美国政府没有这种行政权力免除如此高额的债务。免除了大学生债务，这笔钱事实上就是由全体纳税人买单。这是税法层面的事，必须重新立法。
+拜登政府气炸了肺，宣布他们还是会对抗最高法的判决。
+
+第三个判决，最高法判决，科拉罗多州的一个网站，有权以自己的宗教信仰为由，拒绝为LGBTQ群体提供服务，也就是有权拒绝向各种各种的变异性倾向群体提供服务。
+这个判决同样具有扩张性，其它的机构和企业，也可以根据自己的内心信仰，拒绝向变异性倾向群体提供产品和服务。
+长期以来LGBTQ群体占据了美国最高的政治正确，已经到了丧心病狂的程度，什么男人上女厕和女洗澡间，男运动员参加女性项目，简直让人匪夷所思。现在美最高法开始纠偏了，这就很好。
+
+当然了，美国的左派蠢坏们前面已经骂了两次了，到这第三个判决出来，已经把喉咙骂哑了。很可怜的。
+- - -
+7.2
+
+2023已经过去了半年。这个世界还是那样，依然还在按既定的轨迹往前走，不以任何人的美好幻想为转移。 
+- - -
+一组非常有意思的数据：党员人数追踪。1980年党员占全国人口比值3.85%，到2022年提升到6.94%。毫无疑问，这就是中国维持稳定治理的根基。
+
+需要重点关注的事情在于，56岁以上党员占党员人数的比值超过了3分之1。
+
+这里使用56岁，是因为56岁以后，即使在党政机关，绝大多数人按规矩都要退居二线。根据国家统计局抽样调查的数据，2021年，55岁以上人口的占比为27%。这意味着党员的老龄化比例，大幅超出全国人口老龄化的比例。当然，这同时也意味着党组织吸纳年轻一代党员的能力并不强，党员总人数的增长，更大程度上，是因为人口寿命的增长。
+
+![](/images/20230703001.png)
+- - -
+《失控的离岸人民币》预告片：中国官方口径里的离岸人民币规模不到两万亿人民币（图一），而要理解这组数据，首先我们必须理解中国官方，到底是怎么样进行的境外人民币统计。香港金管局确实会单独进行人民币存款的统计，这是因为香港和大陆的特殊关系。但是其它国家和地区，它们并不会特别统计人民币存款的规模，而都是笼统的统计为“外币存款”。比如说，在英国的离岸人民币存款约800亿，这到底是怎么算出来的？
+
+好在这个数据的来源并不难找，这个800亿人民币存款的数据来源，是由伦敦金融城政策与资源委员会与我国央行的欧洲事务处联合进行的统计（图二）。金融城是伦敦市的一个区。也就是伦敦一个区的政府下属的一个半官方性质的协调性组织，与我国央行的海外办事处，合作进行的统计。这种统计当然不是由英国央行或英国金融主管部门主持进行的全面统计。
+
+伦敦的金融城区政府甚至都没有对银行的管辖权，我国央行就更不可能要求英国各大银行交出它们的后台数据了。它们合作的统计数据，仅仅只能统计英国的中资银行的经手的人民币结算款，以及针对外汇公开交易市场的人民币保证金部分进行粗略估算。而不可能对各银行的人民币存款做全面统计。这种统计数据的可信度，几乎略等于零。
+
+![](/images/20230703002.jpg)
+
+![](/images/20230703003.png)
+- - -
+7.3
+
+以前经济下行周期有口红效应和短裙效应，女生们打扮一下自己，涂上鲜艳的口红，穿上美美的短裙，以改善心情。
+到今时今日，口红和短裙已经没有了仪式性的意义，改善心情的方式变成了医美效应，女生们做个即时见效的医美项目，事业受挫的男士们也参与了进来，做个植发什么的，以改善心情。
+与医美效应同时出现的，还有宠物效应。经济下行周期，离婚率上升，结婚率下降，饲养宠物就更加普遍了。在中国这种钢筋水泥森林国家，养狗比较麻烦，养猫就成为了时尚。
+就这两条，算是给接下来实在不知道干啥的各位的一点建议吧。
