--- a/source/_posts/失控的离岸人民币（微博：老蛮频段-2023-07-04-2023-07-06）.md
+++ b/source/_posts/失控的离岸人民币（微博：老蛮频段-2023-07-04-2023-07-06）.md
@@ -78,4 +78,71 @@ tags:
 非洲各国的日子非常艰难，粮食都快买不起了。南美各国的日子同样艰难，工业品都消费不起了，也没钱进口。
 
 中国封杀了所有认为经济遇到了困难的网红。
+- - -
+7.7
 
+就小学招生人数来说，2019年是近十年的峰值，1869万人。此后三年分别是：
+
+2020年1808万；
+
+2021年1783万；
+
+2022年1701万。
+
+2022相对2019年的降幅为9.0%。这个降幅其实已经不低了。它所对应的，就是教师和学校的必然缩编。
+
+出生人口锐减的浪潮，其实已经冲击到小学教育了。然后它会逐级加深和蔓延，无可阻挡。全中国所有行业，都要承受人口锐减带来的剧烈冲击。
+- - -
+看了昨天视频的同学都已经知道，即使按保守的算法，离岸人民币的存量也超过10万亿，并且还在源源不断的通过深港之间的外贸通道流出去。
+
+本周央行终于忍不住出手在离岸外汇市场进行了干预，想要捍卫人民币汇率，结果没什么用，无法阻挡大势。并且央行这种出手还必须完全遵循成熟市场的规矩，要真的抛出真金白银的外汇。
+
+这就是尾大不掉，离岸人民币规模过于庞大，自己具备了完全的市场定价权，我国央行已经毫无办法了。
+- - -
+蚂蚁金融引发传统金融圈众怒一事，看来已经到了尾声——罚款70亿，撤销相互宝，就此了结此事。
+
+蚂蚁金融引发滔天怒火的原因，在于它过于扯淡的金融模式：只有三十亿本金；通过支付宝强大的吸金能力，以略高于银行活期存款的利息（约2%）吸收了两万亿存款，然后拿去给支付宝用户放高利贷，利率约20%。
+
+因为支付宝的大数据存在，蚂蚁可以科学的判断用户的支付能力。它还掌握客户真实的身份信息和地址信息，这些地址往往同时包含家庭住址和公司地址。所以蚂蚁的用户评级是很精准的，也很少坏账。
+
+你可以算出这笔生意的利润率吗？区区30本金，对应两万亿的18%的年收益，也就是3600亿。每年120倍的收益率！你见过这种生意吗？
+
+不仅如此，蚂蚁还要做保险生意。蚂蚁一分钱本金都不出，让支付宝用户投钱建立一个资金池，出了保险事故，用户从资金池里拿赔偿金。蚂蚁不仅可以对这个资金池收管理费，还可以把资金池里的钱挪去放高利贷，反正蚂蚁没有任何义务，也不受任何监管。
+
+这么说吧，就上面这两件事，刑法金融篇里的每一条，其实都是够得上的。现在这样结案，已经算是网开很多面了。
+- - -
+7.8
+
+中国人对于有些无关紧要的事情，十分在意。比如插个队啦，高铁骂架啦，明星泡妞啦，动不动就上升到人格和秩序层面，搞得特别讲究规则似的。
+
+但是，一旦真的面对规则的考验，中国人的表现，呵呵呵，我只能说，比零分高不了多少。
+
+蚂蚁金融这种东西，没有银行和保险牌照，没有监管，没有风险评估和管控，没有风险准备金，没有资本充盈考量，没有客户诱导的限制，没有现代金融所需要的一切规则，但却活成了中国人心目中的偶像，甚至它只被轻轻罚了个70亿，都被很多国人视为对它的不公。不把蚂蚁金融推上神坛，不把所有的规则踩在脚下碾碎，这些人就是觉得不公平。
+
+为什么呢？因为他们崇拜的只不过是财富而已。蚂蚁金融肆无忌惮的敛财，这就是中国人眼中，最大的正确。
+- - -
+最近一些原因重新看完了【资本论】一二卷，距离我上一次通读这两卷书已经过去了差不多20年。我的感受是：20年前惊为天人的思想，如今读起来味同嚼蜡。这20年我辗转浮沉，至少是学会了做生意。老马这种纯书生，是真不懂做生意啊，他的文字里但凡提到了相对具体的生意经，讲述厂矿企业怎么挣钱的内容，全都是瞎扯的。
+
+即使是一百多年前，人家厂矿企业都不是按老马想象中的那一套模式做生意的。
+- - -
+7.9
+
+中国的乘用车市场，大概30%是电动车，接近20%是国产燃油车，剩下50%，则是合资品牌车。也就是说，合资车依然是中国汽车市场的主流。
+
+这些合资车的销量近七年来都在下降，至今销量已经腰斩，2023年上半年的销量降幅也有7%。
+
+我的意见一直非常明确：合资车全都活该死，无例外。
+
+这么多年以来，合资车在国内玩的就是提价格降配置这一套，把中国消费者当成猪狗和韭菜，同款车型，国内的性价比只相当于国外的一半，并且至今都不思悔改，从来不想着提升国内合资车的性价比，还消费者一个公道。乃至前几天合资车厂们还搞价格联盟，约定集体不降价，然后昨天就被摁死了不许搞价格联盟。
+
+观念腐朽到这种地步，合资车厂不死没天理。早死早好。
+
+![](/images/20230709002.jpg)
+- - -
+有意思。说中国合资车厂长期把中国消费者当成猪狗一样宰割，居然惹出了一小撮香蕉人给外方打抱不平，说欧美人最淳朴了才不会宰割黄种人，坏事都是合资车厂的中方股东干的。
+
+这么多年下来，上海大众把价值8万块钱的桑塔纳卖20万，德国股东是没参与分这12万超额利润？他们把这部分利润都捐给希望工程了？
+
+分利润的时候笑容满面，写进财报的时候志得意满，定售价的时候口水直流，外资的吃相也不会比中方股东优雅到哪里去，现在就活该被反噬，活该销量腰斩并且被中国市场淘汰。有什么可推卸的。
+- - -
+今时今日玩价格联盟，除了恶心潜在客户之外没有任何用处。另外，我的观点始终都是：中国汽车市场的主流就是合资车厂，它们全都该死，无例外。这么多年合资车厂在国内提价格降配置，把中国客户当成猪狗，同款车型的性价比较国外低了一半，至今不思悔改。不死没天理。
