--- a/source/_posts/失控的离岸人民币（微博：老蛮频段-2023-07-04-2023-07-06）.md
+++ b/source/_posts/失控的离岸人民币（微博：老蛮频段-2023-07-04-2023-07-06）.md
@@ -1,4 +1,4 @@
-title: 离岸人民币（微博：老蛮频段 2023.07.04-2023.07.06）
+title: 离岸人民币（微博：老蛮频段 2023.07.04-2023.07.09）
 author: laoman
 date: 2023-07-06 22:26:57
 tags:
@@ -146,3 +146,22 @@ tags:
 分利润的时候笑容满面，写进财报的时候志得意满，定售价的时候口水直流，外资的吃相也不会比中方股东优雅到哪里去，现在就活该被反噬，活该销量腰斩并且被中国市场淘汰。有什么可推卸的。
 - - -
 今时今日玩价格联盟，除了恶心潜在客户之外没有任何用处。另外，我的观点始终都是：中国汽车市场的主流就是合资车厂，它们全都该死，无例外。这么多年合资车厂在国内提价格降配置，把中国客户当成猪狗，同款车型的性价比较国外低了一半，至今不思悔改。不死没天理。
+- - -
+一说中国合资车厂长期把中国消费者当成猪狗一样宰割，就会惹出了一小撮香蕉人给外方打抱不平，说欧美人最淳朴了才不会宰割黄种人，坏事都是合资车厂的中方股东干的。
+
+这么多年下来，上海大众把价值8万块钱的桑塔纳卖20万，德国股东是没参与分这12万超额利润？他们把这部分利润都捐给希望工程了？
+
+分利润的时候笑容满面，写进财报的时候志得意满，定售价的时候口水直流，外资的吃相也不会比中方股东优雅到哪里去，现在就活该被反噬，活该销量腰斩并且被中国市场淘汰。有什么可推卸的。
+- - -
+我今天要在这里说一句心灵鸡汤：我希望你们以后永远都不要相信人性。这世上唯一可信的，只有利益，而人性是在利益面前可以被第一个扔出去的筹码。
+
+无论古今中外，无论白人黑人黄种人，无论是个体还是整体，全都是如此。
+
+如果有一件事，要成功的唯一指望是办事人的人性，那这件事一定会失败，绝不要指望自己会是能中人性大奖的那一个。
+如果在你们日后的人生中、职业中，需要付出大量的资金，而获得回报的可能性只能寄托在收款方的勤奋、善良之上，一定要拒绝投入。即便这个收款方是你们至亲的人，也要拒绝。如果一定要投，做好收不回来的心理准备。
+
+往大了说，中国应对接下来的日子的方式，毫无疑问就是大抑制模型，这就是让底层在高度压抑的环境下相互残害，人性当然是不可信任。在欧美那边，其实连模型都还没明晰，不过我相信，就欧美这种左右剧烈冲突和撕裂，时不时就来一场全国暴乱的现状，最后也一定会是最灭绝人性的模型占据上风。
+
+不要对人性抱有任何幻想。如果以后有一天，是我站在你们身前，也不要怀疑我为了争夺半包巧克力而向你们捅刀子的决心。
+
+老实说，我对今天，在V+用户中，居然有10多人，对欧美白人的人性怀有幻想，是非常失望的。想了半天，清除了这群粉丝，没有拉黑。这真是幼稚得太可笑了。
