--- a/source/_posts/失血（推特：老蛮频道-2023-07-16-2023-07-18）.md
+++ b/source/_posts/失血（推特：老蛮频道-2023-07-16-2023-07-18）.md
@@ -1,4 +1,4 @@
-title: 失血（推特：老蛮频道 2023.07.16-2023.07.18）
+title: 失血（推特：老蛮频道 2023.07.16-2023.07.20）
 author: laoman
 date: 2023-07-18 13:34:14
 tags:
@@ -53,3 +53,49 @@ tags:
 从原理上来说，政府债务炸弹引爆的条件，是新借的钱无法偿付到期债务；企业债务炸弹引爆的条件，是利润率低于借款利率；居民炸弹引爆的条件，是收支盈余（可支配收入-消费性支出）水平下降到无法覆盖到期债务的程度。
 
 这三个条件已经接近同时满足。
+- - -
+7.19
+
+经济垮成了这样，发改委商务部之流给出的对策是刺激消费。嗯，卡脖子的手坚决不撒开，反过来还逼着人吃喝玩乐。
+
+老百姓手里真的拿着大把的钱不消费吗？这个政策前提是怎么得出来的？
+
+所谓精神分裂，所谓愚蠢，所谓无知，莫过于此。
+
+![](/images/20230721001.jpg)
+- - -
+其实国家统计局调低去年的基数，然后宣布今年又取得了胜利的增长，这么干也不是不可以，全世界政府都会经常性的修正基数。
+
+但是有一条，你调低去年的基数，你就要相应调低去年的增速，取消去年的胜利。
+
+你不能去年赢了，今天调低基数又赢一次。你只能赢一次，要么去年，要么今年。
+
+道理就这么简单。
+- - -
+我以前真的相信过中国人在生死关头会反抗。毕竟已经在工业时代生活了30年，受到了现代文明的浸润，享受过了有限的自由。在一些无关紧要的小事上，也有民主调研的流程。大规模散步曾经是一种常态，民意也曾经裹挟着权力系统，做成过一些有益民生的事情。
+
+然而过去三年，我的看法变了。
+
+中国人真的不会反抗。他们被医院急救室拒绝接诊，活活病死，只会哭泣。他们在家里活活饿死，只会哭泣。他们的幼子被抓走隔离，只会哭泣。他们的宠物被打死、财物被喷洒的消毒剂破坏，还是只会哭泣。
+
+乃至这三年末期的白纸运动，更像是笑话一样，祈求青天老爷的垂怜。
+
+所以，我现在越来越相信，中国现在开始实施的大抑制模型，会持续非常长的时间。将老百姓死死的摁住最底部，放任陷入赤贫的老百姓底层互害，狗咬狗，只要不危害到顶层的地位就行。
+
+就这种大抑制模型，中国人也不会反抗。他们还是只会大声哭泣，并向手无寸铁的邻居挥起菜刀。
+- - -
+7.20
+
+国务院关于促进民营经济发展壮大的意见，这么说吧，这种毫无可执行性的东西，连一丁点的具体措施都没有。今时今日还相信这种官场套话的，也就是三四线城市的那70%中国底层居民了。呵呵。
+
+全文唯一有看点的，还是最后的第八大条，加强组织实施，强化党对民企的领导。再次呵呵。
+
+![](/images/20230721002.jpg)
+- - -
+现在经济到了雪崩的境地，已经没有争议了。这件事中央知不知道？从这几天所有经济相关部门，包括国务院，密集发文来看，中央非常清楚。
+
+但是，这件事中央在乎吗？从这些文件全都是八股文、套话和空头表态来看，中央并不在乎。中央只需要作出一副“我还挺关注经济”的姿态，就足够了。
+
+既定的策略当然还是“大抑制模型”。假装关心一下经济，给三四线城市的基本盘一个纸面上的交代，足够了。基本盘总人口占中国的七成以上，他们愿意接受抑制，不闹腾，中国就可以稳下去，比什么都强。
+
+至于真的搞改革？风险太大，搞不好就身死族灭，中央才没有任何人有兴趣搞这个。
