--- a/source/_posts/失血（推特：老蛮频道-2023-07-16-2023-07-18）.md
+++ b/source/_posts/失血（推特：老蛮频道-2023-07-16-2023-07-18）.md
@@ -1,4 +1,4 @@
-title: 失血（推特：老蛮频道 2023.07.16-2023.07.20）
+title: 失血（推特：老蛮频道 2023.07.16-2023.07.25）
 author: laoman
 date: 2023-07-18 13:34:14
 tags:
@@ -99,3 +99,153 @@ tags:
 既定的策略当然还是“大抑制模型”。假装关心一下经济，给三四线城市的基本盘一个纸面上的交代，足够了。基本盘总人口占中国的七成以上，他们愿意接受抑制，不闹腾，中国就可以稳下去，比什么都强。
 
 至于真的搞改革？风险太大，搞不好就身死族灭，中央才没有任何人有兴趣搞这个。
+- - -
+7.21
+
+中国财政部发布的上半年税收收入情况。其中增值税的情况特殊，增幅达到96%，主要是去年有“留抵退税”之类的缓缴措施，今年内予以补缴。
+
+这里剔除增值税的影响，只计算其它税种收入。今年上半年的其它税收收入是：99661-37503=62158亿。
+
+而2022年同期扣除增值税后的其它税收收入为：85564-19136=66428亿。
+
+也就是说，今年中国其它税收收入的降幅为：62158÷66428-1=-6.4%。
+
+-6.4%。这大概就是中国GDP的真正的萎缩规模。
+
+增长5.5%？不存在的。
+
+![](/images/20230726001.png)
+
+![](/images/20230726002.png)
+- - -
+国内资本市场对于本周发布的半年度经济数据和所谓十多项振兴经济措施的态度是：
+上证指数从3237点跌到3167点。
+
+市场可以说完全没给面子。以前这种密集政策出台，好歹都会硬挺一两天，现在干脆连成交量都没有了呵呵。
+- - -
+7.22
+
+说几句闲话。
+
+2000年代我走出校门，进政府工作。当时的政府风气，是真的有担当，敢闯敢试。法律法规跟不上现实的，局长们跟市长们开个会，是真敢拍板，现场就改革，改完再向上汇报，既成事实，上级不认也得认。
+
+2008年左右我从政府出来企业，当时的风气也还是鼓励模式创新，放手让老百姓挣钱。
+2013年之后，整个国家的风气突然为之一变。官场不再讲究担当，而企业则丧失了锐气。文化上日益保守，因循守旧，批评者也逐渐消失。
+
+就这样，就到了今天。回忆十年前的峥嵘岁月，唯有一声叹息。
+- - -
+7.23
+
+中国现在最大的政治八卦是部长去哪儿了。美国现在最大的政治八卦是拜登家族到底贪了多少钱。
+- - -
+7.24
+
+关于上周五国家推出的所谓鼓励城中村改造政策，这样吧，这件事我干了一辈子，从2007年全国第一宗真正意义上的佛山旧村改造开始，我就深度参与了。从最开始的制度设计，到后来的整个操作变形，我全都在一线见证。我可以直接给出结论：旧村改造已经搞不了了。
+
+真正意义上的城中村改造，仅仅只在两广地区有推行，北方地区根本就理解不了这个事情。北方地区的城中村本身就没有特别拥挤，村内道路横平竖直，所谓改造，无非是微改造，在墙上贴砖啊加个电梯啊什么的，无非是搞搞工程而已。两广地区那种如下图一般的城中村，北方人闻所未闻，在三观层面就理解不了。
+
+两广地区搞城中村改造，得把整个村的原有建筑全部拆除，整个重新规划建设，成本高到惊人。没有开发商会做这种慈善，必须有利润。所以整个村必须一分为二，一半建好的房子给村民回迁，另一半房子拿出去作为商品房卖，以补贴回迁成本。同时，最关键的是政府不能就城中村改造项目收取高额地价。留给村内的那部分房子本身就不该收。即使是对外销售的商品房部分，也不该收，或者即使收也应该按优惠地价收。地价这部分的利润应该留给村集体，供村集体去和开发商博弈，拿更高比例的回迁房。你政府非要眼红城中村改造的地价这一块的利润，那游戏就玩不下去。
+
+我再强调一次：城中村成功改造的前提，是政府对收取地价的欲望，被压制到最低。唯有如此，城中村才能被改造。指望开发商都是圣人，零利润或者赔钱去拆除下图那样的村，那就是神经病。
+
+然而，近五年来，两广地区的城中村改造项目推进极为艰难，前年广州干脆停止审批新的改造项目，原因就是一个：政府就地价如何收取的问题，与村集体和参与改造的开发商谈不拢，分歧越来越大。而且，我认为以后也不可能谈拢。
+
+至于北方地区的城中村搞微改造工程。如果村里愿意出钱，那没啥。村里不给钱的话，反正我看不出来谁会给这个钱。把两广这种全拆的模式往北方推广，这么多年来不是没有地产商试过，基本上都死得很惨。之前让它们死掉的原因，现在当然也还存在。包括地价收取问题，北方当然更解决不了。
+
+所以，看看就好了。
+- - -
+直接写吧：按支出法计算的国内生产总值分成三个部分：净出口、投资和消费。也就是我们一直理解的三驾马车。
+
+净出口（包含货物贸易和服务贸易）今年上半年为3090亿美元，而去年同期为3443亿美元。同比降幅为10.3%。换算为人民币，今年上半年平均汇率为6.925，净出口折算为21398亿人民币；去年上半年平均汇率为6.481，折算为22314亿人民币。21398对22314，萎缩幅度4.1%。
+
+投资，今年上半年固定资产投资规模24.31万亿，同比去年同期的27.14万亿，降幅10.4%。
+
+合并计算。投资和净出口，合起来进行简单计算，今年上半年为26.48万亿人民币，去年上半年为29.37万亿人民币，降幅达到了9.8%。这个缺口需要消费的大幅增长来填补。
+
+消费数据方面，限上单位零售额数据，属于全额上报，相对社会消费品零售总额的数据，更加准确。并且限额以上的零售企业，当然比小微零售商更有竞争力，表现更好。今年上半年，限上单位零售额8.53万亿，相对于去年同期的8.12万亿，小幅增长了5.1%。而最重要的消费数据，上半年的汽车销售增幅，只有2.8%。这种增幅当然无法填补投资和净出口的缺口。
+
+按照往年的数据，投资与净出口合起来占国内生产总值的5成，消费占5成。现在前面两个合起来降幅约1成，消费只有5个点的增幅。请问这三个合起来，国内生产总值是什么情况？是萎缩多少？
+- - -
+
+对了，有件事。有位同学其实抢到了十次沙发，达到了点菜条件，他点的菜是：日美欧中四大经济体，谁在危机之中先倒下，谁就会成为其它三大经济体的养分，被吞噬和消化，从而化解其它三大经济体国内的危机。这个原因是什么？
+
+这道菜点了有段时间了。我现在来回答它吧。
+
+到现在这一刻，日美欧三方已经非常确定的结盟了，并且已经白纸黑字的以中国作为经济上的设定对手，确定中国具有经济威胁。所以，未来就是中国独力对抗日美欧三方了。我可以在这里写得更明确一点：如果中国经济完蛋了，日美欧可以获得什么吧。
+
+任何一个主要经济体的经济完蛋，首先就是货币系统完蛋。完蛋之后，要重建货币系统，重建的关键是建立信用，而这种信用之源，本国已经没有了，只能是来自于日欧美。所以，新中国要发行新的货币，这一套发行机制，必须建立在日美欧借出来的资本金之上。或者，干脆不再重建货币系统，就直接流通日美欧货币。如此一来，日美欧的天量货币就有了长期稳定的去处，并且扼住了中国金融的咽喉。
+
+而在经济完蛋之时，中国的企业会大规模破产。它们之中的优质企业，可以被日美欧以极其低廉的价格收购或者直接白送。其它企业直接让它们死掉就行了。所有的经济危机，都是生产过剩的危机。没有了中国现有的的庞大产能，日美欧可以轻松的选择在任何地区重建产能，这又是至少三十年的美好时光。
+
+对于中国庞大的人口，就把他们死死的摁在中国就行了。不需要给他们温饱，维持饿不死的状态就行。其中的一部分老实听话的可以提取出来作为便宜的底层劳动力，以弥补日美欧劳动力不足的问题。
+
+至于中国的那点子矿产资源，就不会有人惦记了。根本就没多少，也不足以让中国在经济扑街之后成为资源输出国。
+
+不过就算这样，以中国的人口基数和尿性来说，经济崩塌以后也会有5%左右的富人，那就是七千万人，也不少了。反正本国的企业都被弄死了，或者被日美欧收购了，他们想买什么好东西享受生活，都只能买日美欧的产品。这种前景，在日美欧商人看来，那可比现在中国企业满世界占领市场，要美好太多了。
+
+这还只是简单的金融、生产和外贸外面，可以让日美欧笑得合不拢嘴的好处。如果再加上政治、军事等领域的好处，那就更不得了了。
+这么说吧，四大经济体，任何一个挂掉，其它三家都可以有这样的好处，只是现在三家结盟了来对抗中国而已。没法子。
+- - -
+就齐齐哈尔这个事，在体育馆楼顶堆建筑材料，这本来是个责任事故，把事故责任人，也就是学校校长啊、工程负责人啊，这些人都控制好备查，也就是了。如果说教育局还有日常监管不力的责任，把教育局长和主管基建的副局长、科长一并控制起来，也就行了。慢慢查呗。总能查出结果来，跟你书记市长关系不大。
+
+这种责任事故型的案子，基本上都是不作为、乱指挥、敷衍塞责、贪方便之类的管理事故，连贪腐案都算不上。后果严重，但是追责起来，其实真的罪责并不重。教育局方面的监管责任，更是非常轻，估计连警告处分都落不到一个。
+
+结果齐齐哈尔一顿骚操作，防家属犹如防贼，坚决禁止家属接近被救出的孩子，连死活都不告知家属。这种骚操作，显得书记市长也深陷案中，不得清白似的。这就不由得让人怀疑，这个小小的体育馆改造工程背后，是不是真有贪腐窝案了。
+- - -
+7.25
+
+7月24日政治局会议后发布的通告内容，中央打算同时完成下面七件事，并且不打算支付任何代价：
+
+1、稳定汇率；
+
+2、稳定楼市；
+
+3、稳定债市；
+
+4、稳定消费；
+
+5、稳定国企；
+
+6、稳定民企；
+
+7、稳定就业。 
+
+我个人不打算就此做任何分析。就这样吧。
+- - -
+有时候我经常会想，如果从2008年开始，政府啥也不干，啥也不管，上下各级公务人员每天上班就是摸鱼玩手机，偷跑出去打牌钓鱼也没人管，那就好了。
+
+那就没有了四万亿，
+
+没有了腾笼换鸟，
+
+没有了P2P，
+
+没有了钱荒，
+
+没有了股灾，
+
+没有了地产去库存，
+
+没有了环保一刀切，
+
+没有了三年禁闭，
+
+没有了整肃教培，
+
+没有了退林还耕。
+
+天下太平。
+- - -
+下图算是对于房地产的支柱性地位的最好体现了，我更新到了2021年。2022年的税务年鉴数据还没发布，等发布了我再更新进来。
+
+房地产行业创造的全口径财政收入，占财政总收入（一般预算收入+卖地收入）的比值，2019-2021年，都维持在40%以上，远远超过其它任何行业。
+
+2022年地产泡沫破灭，对财政的伤害之大，是不可估量的。
+
+![](/images/20230726003.png)
+- - -
+秦部长还是下落不明，不过职务给免了。老王部长回来暂代。
+
+虽然我们还不知道其中具体的内情，但是有一点是可以确定的：刚刚走马上任的秦部长就有此遭遇，说明这一届班子内部的宫斗剧情节，比以往都要来得丰富。
+班子内部不团结啊。
+- - - 
