--- a/source/_posts/谈（推特：老蛮频道-2023-07-26-2023-08-02）.md
+++ b/source/_posts/谈（推特：老蛮频道-2023-07-26-2023-08-02）.md
@@ -1,4 +1,4 @@
-title: 空谈（推特：老蛮频道 2023.07.26-2023.08.02）
+title: 空谈（推特：老蛮频道 2023.07.26-2023.08.08）
 author: laoman
 date: 2023-08-02 10:11:46
 tags:
@@ -173,3 +173,112 @@ tags:
 第四，中植系完全没有监管，金融没有监管就必然导致不可控的贪腐，所以中植系必然有着规模极其庞大的转移资金、吃回扣和挪用公款。
 
 第五，金融有着放大效应，就算只放大七倍吧。2300亿债权会带来16000亿的损失，这些损失不仅只是中植系的直接关联方承担，还将由全国人民一起承担。
+- - -
+8.3
+
+各位，你们看完三集八大错视频，应该可以确定一件事：权力没有约束，是中国现在所有问题的核心。权力想干什么，要干什么，本应处于严厉的束缚之下。而这，就是中国缺乏的东西。
+
+腾笼换鸟，以简单的一纸政令关停成千上万家民企。
+
+P2P，对打着创新旗号的存贷业务不加以任何监管，放任庞氏骗局的蔓延。
+
+股灾，是权力刻意推动的万亿杠杆资金所塑造的股价泡沫的破灭；
+
+地产去库存，是权力再次推动杠杆资金涌入房地产市场，塑造房价泡沫，2022年也轰然破灭。
+
+环保一刀切，权力打着环保的旗号，肆意关停民企，乃至禁止农民散养家禽家畜，导致底层农民大面积的收不敷出。
+
+三年清零，权力对民众权力的践踏发展到了极致。整个国家的经济实质崩溃，今年当然也没有复苏的可能。
+
+封杀教培，千万级就业的行业轰然倒塌。这是可以作为大学毕业生就业底线的存在，实在找不到工作的时候去教培过渡一下，是近年来的常态。结果权力漫不经心的就弄死了教培行业，加速了年轻人就业形势恶化的趋势。
+
+退林还耕水稻上山，权力再次傲慢的介入农业领域，强迫农民砍树，在山上种水稻。毫无疑问，这会进一步摧毁农民的耕种热情，加剧抛荒现象，导致更严重的粮食进口依赖。
+
+而在这些问题的背后，傲慢的权力对于应该要做的事——加强对于金融行业的监管，没有丝毫的兴趣。对此我们当然可以理解，无非是权力借此参与分赃罢了。而对于不应该干的事——干预乃至是践踏民企、民众个体的人身和财产权利，则充满了兴趣，三天两头的就出政策出指令，以此来彰显权力的存在感。
+
+这，就是错误的根源。而这种没有约束的权力，在人类历史上，从来没有在其它任何主要经济体出现过。在人类进入工业化时代之后，除了中国之外，其它所有工业大国内部，对于权力的运行，必然有着相对完善的约束机制，以确保掌控了越来越多资源的政府，不至于犯下太大的错误。唯有中国，是唯一的例外，这也必然导致更加严重的后果——中国式的经济危机，将会以令欧美难以想象的烈度，轰然炸开。
+- - -
+这么多年来，无论什么事件，但凡是发动大众捐赠的——
+
+捐物的话，由于转运极其的麻烦，光分类包装就要耗费极大的人力，因此没人愿意转运。中国本身作为工业大国，也不缺物资，单一品类的物资从源头运输更能解决问题，所以捐物的结果，一部分被私分，一部分给扔了，一部分卖了废品。
+
+捐钱的话，因为没有任何监督和审计机制，不贪对不起人性。无论是这边的代收捐款方，还是对面的中间收款方，一直到最终受赠人，无论走什么机构的路径，这中间的每一个环节，如果不贪，就是和整个制度设计过不去，在整个系统里连一天都活不下去，所以，层层过手层层贪的结果，就是十块钱里有一块钱能花到最终受赠人手里，就算是清正廉明了。
+
+游戏规则一直就这样，毫无办法。
+- - -
+8.4
+
+伴随着现在中国经济步入萧条，银行被迫降息，整个金融行业都不太能挣钱了。银行业从去年开始，利差已经下降到了1%出头，其实已经没有了降息和让利空间。现在这种艰难也已经传导到了保险公司。保险公司的投资，也挣不到钱了。
+
+今年上半年，60家人身险公司综合收益率中位数为2.34%。其中，12家公司的综合投资收益率在3%及以上，占比20%；29家公司综合投资收益率在2%至3%之间，占比48.3%；19家公司综合投资收益率在1%至2%之间，占比31.7%。综合投资收益率最低的为1.34%。
+
+但是，请注意这个但是，保险公司的投资收益率固然已经低到了这种程度，然而它的资金成本不低，普遍都在2-3%。
+
+为防范保险公司出现利差损风险，从7月31日开始，根据金融管理部门的要求，全国范围内，预定利率3%以上的传统险、预定利率2.5%以上的分红险，以及保证利率2%以上的万能险均已停售。
+- - -
+我来打个版，说明一下真正的，有益于经济的措施，可以有什么内容：
+
+1、民营经济主体的所得税下调到10%以下。国企有着权力和垄断地位护航，短期内改不了，那就降低民企的税负，以增加它们的抵抗力。
+
+2、个人所得税降到10%以下。这才是鼓励中产阶层消费的有效措施。
+
+3、以地市为单位核定当地主要民营产业年产值。一旦出现产值下行，五套班子领导就地免职。培育出新民营产业的，五套班子就地提拔。
+
+4、新生婴儿分地区每个月补贴三千—五千元，至其年满三岁。
+
+5、三线以上城市均应建立完善且免费的技能培训服务体系，向失业人群提供从厨艺、电焊到编程的高质量培训。原来失业的教培人员可以加入这个体系。
+- - -
+8.5
+
+有件事你们必须有基本的概念：一直到现在这一刻，中国在官方层面没有承认过经济出了问题。官方的口径一直都是“稳中向好”，上半年GDP增幅5.5%。年轻人失业率虽然超过20%，但是整体调查失业率也就5%出头，也没多了不起。所以也没必要付出太大代价拯救经济。
+
+我不厌其烦的再强调一次，中央没有第二套数据。中央看到的数据和你看到的数据，没有任何区别。这么说吧，所有数据都是自下而上，涉及数以万计的统计人员，有另外一套数据根本就不可能保密。中国政府内部就没有秘密。无孔不入的金融机构，一定把这另一套数据弄出去炒股用了。
+
+所以，到现在这一刻，中央的决策层，是真的相信经济没有什么大问题，增速放缓了而已。既然只是这样的小问题，那就随便出点嘴炮政策鼓舞一下人心就好了。这才是符合决策的逻辑。
+
+至于真实的世界里，GDP已经是负增长，大学毕业生就业率不到三成，出口降幅在20%以上，不好意思，这些数据只有你们可以在我这里看到，领导们是真看不到。
+
+信息之墙一旦建起来，不仅老百姓看不到真实信息，领导们同样也看不到了。这就是反噬。
+- - -
+8.6
+
+所谓对中国进行地缘层面的封锁，在现实层面是无法实施的。中国这样的大国，陆地边境线2.2万公里，与14个国家接壤。陆地海岸线1.8万公里，海上邻国有6个。这20个陆海邻国各有政治倾向和文化传统，在历史上，也从来都不归属于同一个势力阵营。要将它们统一整合进所谓的“反华阵营”，几无可能。
+
+可是中国自己，凭一己之力，眼看就要做到了。
+- - -
+8.7
+
+目前整个欧美世界都在通胀潮之中痛苦不堪，唯有中国独树一帜：滞胀。
+
+滞胀的威力，大概相当于通胀的十倍吧。就问你怕不怕？！
+- - -
+如果是已经移民国外的简体中文用户，跟着中国证券圈子那帮别有用心的分析师们，宣称中国处于通缩之中，我也就无所谓了。毕竟各位对国内的物价已经没有了贴身感知，在我没来推特之前只能听别人胡说八道。
+
+肉身还在国内的，你们感受不到零售端的物价涨幅？有这么不食人间烟火吗？物价之母，汽油价格的持续上涨，看不到吗？经过加油站的时候不会看一眼吗？
+
+通缩？商品价格下跌？跌你妹啊跌。也就是粮食和蔬菜价格被行政之手死死的摁住，保证老百姓有口饭吃，其它商品涨疯了好吧。
+
+说了中国现在是最可怕的滞胀，经济下行、各行各业的利润都扑街的同时，物价还在上涨，就是现在的情况了。
+
+![](/images/20230808001.jpg)
+- - -
+中国社会的规律是“逢8必乱”。
+
+第一次，是1988年开始的群众反腐运动，到1989年闹出64风波。风波之后中国被全面制裁，内部改革与对外开放之路断绝，物价持续暴涨，政府财政濒临破产。于是1992年邓老南巡，重启内部改革。1995年政府被迫推行分税制，中央拿走七成税收，集中有限财力应对危局。
+
+第二次，是1998年。这一年内外交迫到了极致。外部有亚洲金融风暴肆虐，内部更是艰难，地方财政在分税制之后无法再补贴效率低下的地方国有企业，于是三千万过期工人下岗，可以说是民不聊生。同时，为了拓宽财政收入，开始了住房商品房改革，允许地方政府卖地。这一轮乱局一直持续到2001年底，承诺44项重大变革后加入世贸，经济逐渐恢复，中国逐步成长为世界工厂。
+
+第三次，是2008年，全球金融海啸。中国被迫放开地方政府的借债限制，启动四万亿基建投资计划，最终中央拨款与地方借债形成的投资资金超过20万亿。地方债的雪球就此开始滚动。
+
+第四次，是2018年。一方面中国突然实施修宪，从改革开放之后实行的权力十年更替一次的规则就此改变。另一方面，美国对中国仅履行了44项入世重大承诺中的22项极为不满，发起中美贸易战并延续至今。自此全球逐渐开启“去中国化”之路。中国经济正式进入下行周期。
+
+按照逢八必乱的规律，2018年开启的这一波下行，最多到2028年，就一定要出结果了。
+- - -
+8.8
+
+6月30号离岸人民币汇率达到7.285以来，离岸人民币交易市场打得火花四溅，至今绝大部分交易日的当天振幅在0.5%以上。对于汇市这种动不动杠杆就加到一百倍的市场来说，这已经是极惨烈的连续厮杀。
+
+离岸人民币的多方永远只有一位，中国央行。而市场资金的立场基本一致，集体做空。
+有意思的是，以前市场资金在中国央行面前会习惯性退却，不愿意跟中国央行对抽。按以前的打法，中国央行把离岸汇率打到7以下，难度并不大。结果这一个半月以来，市场资金的立场明显强硬了起来，在7.1附近死死咬住，打到现在，央行明显已经放弃了。
+
+市场资金的心态变化，我估摸着，中国经济复苏被证伪是一个原因；欧美“去中国化”的同盟在七月份以北约峰会的形式正式成型，是一个原因。还有一个微不足道的原因，大概是我分析出了离岸人民币的总量，绝对不止中国官方宣称的两万多亿人民币，而是超过16万亿。搞清楚了这个事实，意味着央行手里的弹药，其实根本上就不足够。谁是纸老虎，也就一目了然了。
