--- a/source/_posts/开不动的印钞机（推特号：老蛮频道-2023-08-09-2023-08-11）.md
+++ b/source/_posts/开不动的印钞机（推特号：老蛮频道-2023-08-09-2023-08-11）.md
@@ -1,4 +1,4 @@
-title: 开不动的印钞机（推特号：老蛮频道 2023.08.09-2023.08.11）
+title: 开不动的印钞机（推特号：老蛮频道 2023.08.09-2023.08.14）
 author: laoman
 date: 2023-08-11 19:27:32
 tags:
@@ -132,3 +132,131 @@ tags:
 ![](/images/20230811005.jpg)
 
 ![](/images/20230811006.jpg)
+- - -
+根据7月份的社会融资增量统计报告，7月份中国全社会融资增量5282亿。从2017年一直到去年，七月份融资增量数据一直维持在1万亿左右，大众的预期值也是1万亿，现在降到五千亿，可以说让整个金融圈都措手不及。金融冰冻，钱想借都借不出去，这种现象，就叫做“开不动的印钞机”。
+
+在7月份的各分项数据里，唯有企业债券和政府债券的新增融资数据亮眼。考虑到企业债里的绝大部分都是国企债券和城投平台公司债券，所以，政府债务，成为了7月份推动印钞机的唯一动力。政府债务的信用程度极低，它根本无法向人民币提供足够的信用，所以人民币汇率顺理成章的暴跌。
+
+![](/images/20230814001.jpg)
+
+![](/images/20230814002.jpg)
+- - -
+我这里最近很少看到五毛和自来红的评论了。我留意了一下其他简中推主，也是这样，所以应该不是因为我拉黑操作比较熟练的缘故。这大概一方面是因为国内的舆论潮跟火山爆发一样此起彼伏，尤其是河北这一场人祸，全网痛骂至今，包括抖音估计都要每天封上万个河北当地农民的号，把五毛们累坏了，没空搭理境外推特上的反贼。
+
+另一个原因，政府财政紧张，过起了苦日子，也没办法再大规模外聘临时工来跟离岸反贼们对骂。
+
+第三个原因，推上的自来红最近估计比较懵逼，被激烈对抗的中外关系给吓到了，不知道该怎么站队吧。
+- - -
+8.12
+
+所谓经济出现系统性问题，就是现在这样的情况：
+
+地产泡沫坍塌。地产公司债务爆雷，银行和基金信托业等痛苦不堪。地方政府收入随之锐减，房地产业近年来贡献了财政四成的收入，财政根本无法承受现在卖地收入及相关上下游行业税收爆减的后果，于是城投债连续爆雷。
+
+结婚人数和出生人数在六年内腰斩。
+
+老百姓消费能力剧烈下降，耐用消费品市场剧烈萎缩。但是生活必需品价格还在猛烈上升。滞胀格局形成。
+
+中外关系剧烈恶化。出口受阻，外商投资受阻，境内的外资加速出逃。
+
+适格借款人消失。“以债为锚”的人民币发行机制失灵，印钞机想开也开不动了，只剩下凭空印钱、无锚印钱这一条路。
+
+政府对以上困局束手无策，于是口号救市，还被大家看穿了。
+
+怎么办？既然政改已不可能，那就尊重大国的既定命运吧。
+- - -
+中国政府官员一直有一种根深蒂固的偏见：老百姓很有钱，只要稍微刺激一下，他们就能拿出钱来，又买车又换房，手机电脑全部换新的，顿顿都在饭店吃大餐，把经济带上一个又一个高峰。然而中国的财富分配机制是280模式：2%的权贵拿走了全国80%的净存款，不承担一分钱的债务；剩下98%的老百姓，只有20%的存款，并承担100%的债务。
+
+这意味着一件事：庞大的银行居民端存款，与广大老百姓没有什么关系。唯有不断增长的居民端债务，才与广大老百姓有关。
+
+因为错误的理解了财富的分配模型，所以中国政府近十年的所有决策都是错的，八大错的根由，就是政府误以为居民端的财富榨之不尽，韭菜割不完。
+
+可悲的是，一直到现在这一刻，中国政府还是这么认为的。何不食肉糜这种风气，是有坚实的历史传承的。为什么呢？因为官员们的日常生活和社会圈子，早就和老百姓没有任何关系了，相互隔绝了。
+- - -
+时运这件事，真的没法用科学原理解释。
+
+中共从建党开始，一直到2015年，一路磕磕绊绊，但是每到关键时刻，总会有天降大运，扶持它度过难关，每次的际遇之神奇，都让人叹为观止。
+
+建党的时候，同期在中国宣布建立共产党的还有很多，就这一支莫名其妙阴差阳错拉到了苏联的赞助。
+
+江西中央根据地陷入左倾主义，并导致反围剿失败。之后长征本来是毫无希望的绝境挣扎，但莫名其妙的突出到了陕北。整个过程甚至都无法准确复盘。
+
+到陕北之后弹尽粮绝，本来还是死路一条，结果一无是处的东北军张学良突然宣布联共抗日，毫无逻辑的发起西安事变，八路军从此获得了稳固的生存空间和合法的政治地位。
+
+国共内战前期跟国民党抢东北，本来已经抢输了，全党都绝望了，都打算退到苏联境内去了，但是突然神差鬼使的又抢赢了。拿下了当时的重工业基地大东北，事实上就赢了一半内战。美国当时的政治倾向又别别扭扭，冷战还没搞起来，不介入中国内战的声音占上风，于是共产党神奇的打赢了内战，成功建政。
+
+建政后，在治国方面各种瞎搞，我的总结是“社会帝国主义模式”，三个特征：高度的集权、残酷的税收和极致的人身控制，甚至不承认私有财产的存在。这么搞不可能维持社会的正常秩序，连农业都坍塌了。好在一开始有苏联挡在前面跟美国对抗搞冷战， 所以中国自己瞎搞也没啥国际压力。
+
+但是中国很快又跟苏联和越南闹翻，内忧外患，于是1970年代末期尝试跟美国交好，搞改革开放。美国也巴不得多个盟友对抗苏联，于是中国又多了一口气。
+
+但是中国一开始也没打算真的改革开放，还是口号性质，治国其实还是社会帝国主义那一套，老百姓受不了了，于是1989学潮运动，再之后中国陷入持续的通胀，然后就是三千万国企工人大下岗，眼看就是万劫不复。
+
+可是2001年阿拉伯世界跟美国闹翻，911是美国本土遭受的最大攻击。美国因此决定跟中国更深的结盟，于是网开一面，在中国承诺进行44项重大改革之后就允许中国加入了世贸，不再要求中国先改完再加入。
+
+中国政府方面也痛定思痛，意识到社会帝国模式不再适用于新世界。于是履行了22项承诺，新的经济模式“权贵资本主义”出现，还是三个特征：核心产业由权贵控制；非核心产业可以允许老百姓经营和发财；这种允许是一种恩赐，可以随时收回。无论怎么样，这算是解开了中国人身上的部分束缚，中国经济在老百姓的辛勤劳动的推动之下开始腾飞，并成为制造业第一大国。
+
+这种模式一直维持到2015年之后，各种矛盾开始暴露出来。在外部，中国不履行剩下那一半承诺的行为越来越让欧美无法忍受，这一次也没有了苏联挡在前面，俄罗斯到2021年作死打乌克兰反而还暴露了色厉内荏的本质。国内则一方面虐待民企，一方面为了权贵资本的利益而乱吹各种资产泡沫，导致民怨沸腾。
+
+我实在是好奇，这一次，中国政府，还有没有以前那种逆天的运气，可以轻松度过这次的难关。反正，就我个人看来，实在是没有任何破局的可能性了。
+- - -
+8.13
+
+中国人的鸡贼之处就是：局势都这样了，绝大部分人的问题还是，“你说说我能做点什么来避免损失，并且还能挣点钱？”他们一边得意洋洋点着菜，一边鄙视的看着你。如果你居然回答不出来，那么，在这帮鸡贼的国人心中，你连锦囊妙计都没有一个，想来也是啥都不懂，都不配说话了。
+
+好吧我统一回答一次：
+
+连你们这样的鸡贼都能轻易规避的危机，那就不是危机了。
+
+回答完毕。
+- - -
+上一条讲了鸡贼的国人，总是幻想不用付出任何代价，就能规避风险，乃至还能占便宜。然而这种鸡贼的 心态，不仅存在于普通国人。自下而上，中国各级政府领导人，普遍如此。最典型的表现，就是所谓“工具箱理论”。
+
+面对经济危局，政府不需要付出任何代价，不需要做出任何变革，打开工具箱，就能搞定。
+
+这种极致的意淫，充斥着上上下下的绝大多数人。似乎大家都忘记了这个最基本的概念：这个世界没有东西是免费的。知识不是免费的，和平不是免费的，经济增长不是免费的，产业发展不起免费的。它们全都要通过艰辛的努力和痛苦的变革，才能获取。
+
+打开所谓的工具箱，随便掏出一两个意淫犯假想的所谓对策，就能再次获得伟大的胜利？你们忘记哪怕在1998年，都有上亿的下岗工人家庭了吗？丈夫骑着单车送老婆的日子，也才过去二十年啊，都忘了吗？
+
+可惜，现在的中国人，从上到下，也没几年好日子，就已经连常识都不具备了。
+- - -
+中国人没有为危机的到来做任何准备，无论是心理上的还是物理上的。虽然我从2016年开始系统性的阐述中国式危机的成因和发展过程，但是没什么用，99.999%的中国人，直到现在这一刻，根本就不相信中国会发生经济危机。并且这种危机，还即将因为政府的骚操作，恶化为金融危机。
+
+越是全民没有任何准备，危机的后果就越重。
+
+我对此也算是抱着喜闻乐见的心态就是了。该来的就让它来吧，越惨痛越好。
+- - -
+今天批评了一天中国人的劣根性，临睡前表扬一下吧：中国人最大的优点，就是无论怎么样都能活。
+
+没有尊严可以活。
+
+没有温饱可以活。
+
+无休止的劳作可以活。
+
+无止境的欺凌可以活。
+
+像野草一样活，像蟑螂一样活。
+
+一代又一代，活到现在，成为全世界唯一传承了三千多年的文明。
+- - -
+8.14
+
+一大群人每天都在叫嚣，要降存量房贷利率，认为这是拉动经济的好办法。我每次听到都是冷冷一笑。
+
+且不说“存量房贷套住的那批人在降一点利息之后就勇于消费了”这个在逻辑上根本就站不住脚的问题，就这个问题：银行还有降息空间吗？
+
+截至目前银行业的息差水平就1%出头，它的平均资金成本约2.5%，还有至少2%的坏账率，合起来超过4.5%的硬成本。这还没算银行本身的经营成本。
+
+这两年来为了支持基建和投资，不停的降息，地方债的利率已经降到3.12%，相当于银行贴本给政府搞投资了。目前存量房贷利率约5%，已经银行最好的资产，甚至可以说是唯一的优质资产。
+
+我直接给结论吧：只要下指令说将全国存量房贷利率降到4%，不出半年，中国的银行就会排队倒闭，不分大小银行，一律倒闭，没有任何例外。
+- - -
+金融市场继续坍塌，资金出逃造成的踩踏现象还在继续。这种情况再持续两天，就是股灾+汇灾了。
+
+金融需要的是什么？是信心！而不是简单的降息。降息对现在早已没有了利差空间的金融业来说是灭顶之灾，是绝对的利空，根本承受不住。
+
+信托和资管行业已经在爆雷了。估计接下来雷声会持续不断吧。
+
+![](/images/20230814003.png)
+
+![](/images/20230814004.png)
