--- a/source/_posts/开不动的印钞机（推特号：老蛮频道-2023-08-09-2023-08-11）.md
+++ b/source/_posts/开不动的印钞机（推特号：老蛮频道-2023-08-09-2023-08-11）.md
@@ -260,3 +260,18 @@ tags:
 ![](/images/20230814003.png)
 
 ![](/images/20230814004.png)
+- - -
+明天上午十点国家统计局出七月份经济数据。😜又到了国家队在金融市场出手维稳，各大媒体宣扬“稳中向好”的重要时刻了。
+
+最近这种重要时刻有点多啊。再这么下去，每时每刻都会是重要时刻，都需要维稳，国家队手里那点真金白银，可是很快就要耗尽了呵呵😄
+- - -
+7月份的金融数据惨不忍睹，惨就惨在下面的图一这张表，7月份的社会融资增量5282亿，其中人民币贷款增量只有364亿。老实说，我真的不知道应该怎么评价这个364亿的人民币贷款增量，低到令人发指，离负值只有一步之遥。7月份的融资业务，也就是靠涂成蓝色的政府发债撑着了，不然就是全面扑街。
+
+为了说明问题，我贴出了图2，2022年的社会融资增量表。7月份就算是传统的金融小月，当时的贷款增量也有4088亿。今年这种情况，已经是惨淡到无以言表，都不知道应该怎么算同比和环比。
+
+至少，我微信上金融圈的朋友们，已经很久没发过朋友群了。
+- - -
+奇怪了，央行真的不打算在离岸人民币汇率市场努力一把了吗😜，现在这也躺平得太彻底了。按现在这趋势，本周过7.3毫无压力啊。
+- - -
+
+
