--- a/source/_posts/了（推特号：老蛮频道-2023-08-15-2023-08-18）.md
+++ b/source/_posts/了（推特号：老蛮频道-2023-08-15-2023-08-18）.md
@@ -106,3 +106,19 @@ tags:
 无论多强的金融市场，都承受不起大股东们如此高强度的吸血。新韭菜都来不及长出来。所以2020年后的中国股市，一定不可能出现牛市。
 
 ![](/images/20230818007.png)
+- - -
+我到现在还清晰的记得2016年启动楼市去库存之后的诸多疯狂：
+
+银行推出了所有能想象出来的项目，借钱给地产商买地和老百姓买房。地产商连拍地保证金可以贷款，老百姓的首付可以贷款，装修可以贷款，完了连房子的升值部分都可以单独贷款。
+
+所有在售楼盘都人满为患，售楼部要限制人流，凭存折余额进场。
+
+每次开盘都像动物园，市民哭着喊着，流着眼泪流着汗，生怕抢不到一套房。
+
+做销售的小姐姐，仿佛掌握了最关键的生存资源，每套房可以勒索客户30万的茶水费，客户还担心自己送不出去。
+
+二手房领域更是群魔乱舞。中介屯房，业主反价，恶性违约。人性完全丧失底线，只有贪婪和凶狠。
+
+到这种程度，泡沫不破灭，绝无可能。
+
+![](/images/20230818008.jpg)
