--- a/source/_posts/睁开眼睛走进黑暗（推特号：老蛮频道-2023-08-19-2023-08-22）.md
+++ b/source/_posts/睁开眼睛走进黑暗（推特号：老蛮频道-2023-08-19-2023-08-22）.md
@@ -1,4 +1,4 @@
-title: 睁开眼睛走进黑暗（推特号：老蛮频道 2023.08.19-2023.08.22）
+title: 睁开眼睛走进黑暗（推特号：老蛮频道 2023.08.19-2023.08.24）
 author: laoman
 date: 2023-08-22 21:08:53
 tags:
@@ -160,3 +160,81 @@ tags:
 更麻烦的是，过了四十年安稳日子的中国人，甚至都不能理解危机是什么。有一些愚蠢的国人，甚至还在臆想中国还是社会主义模式，不会发生危机呢。呵呵。呵呵，呵呵呵呵。
 
 ![](/images/20230822010.jpg)
+- - -
+8.23
+
+央企里的普通员工，烟草最好混，没什么事干，真正的业务全都外包出去了，日常搞搞学习啥的，一辈子很轻松就混过去了。
+
+其它央企的规则是：市场化程度越高的，普通员工的日子越难过。比如招商华润介入的都是激烈竞争领域，码头航运，银行金融，地产零售，环保医药，这些普通员工都累得像狗一样。
+
+中建系这种搞建设的央企，普通员工更是比狗还累。
+
+再比如银行、两桶油和电信联通这种半市场化的央企，普通员工的日子说不上特别轻松，也没有特别卷，比民企来说总归强得多。
+
+电力领域虽然是高度垄断，但是普通员工很累，这是很特别的例子。中国在电力领域的基础设施建设和维护力度，比欧美强，这是要承认的。
+
+当然，无论在什么央企，混到二级子公司的部门长（相当于三级子公司的总经理）这种级别，日子就很轻松了。
+- - -
+现在金融市场的情况是这样的：
+
+股票市场已经确定是股灾了。外资蜂拥出逃，近一周光北向资金就净流出了294亿。
+
+离岸人民币市场，在7.30一线打得鼻青脸肿，央行的维稳越来越缺乏力度，底气全无，以前吓一下就跑的空头们这次铁了心站稳了跟央行杠到底了。
+
+最麻烦的是，汇率第二战场，港币之战再次开启。现在这一刻已经又打到了7.84。
+
+要守离岸人民币，就得同时守住港币。港币打到7.85的弱方保证线，就要再次开始持续的流血，流失宝贵的外汇。就现在这种两线作战，央行根本承受不住。
+
+整体来说，现在可以说是处处都是罩门，处处都要倾尽全力防御，所以处处都防不住。反正我是看不出央行还有什么大招可以用。继续看热闹吧。
+- - -
+美国也是神奇。一方面美联储在紧缩美元，疯狂加息，估计今年还得加一到两次息，试图减少市场上的美元流通量。另一方面美国政府疯狂的花钱，美联储压制了多少流动性，美国政府就两倍三倍的补回去。有时候我真的非常阴谋论的怀疑这到底是不是一出双簧戏。
+
+当然，这种骚操作，美国人反正是受益方，美国政府的钱好歹都花在了美国本土，美国人自己身上。国外是真难受，顶不住。尤其是中国，是真顶不住。
+- - -
+8.24
+
+一觉醒来，俄罗斯人的骚操作又来了：瓦格纳的领袖普里戈津，连同一飞机的其他首领，被同时暗杀了！他们好像是被凑齐了一样，登上同一架飞机，然后走向了死亡。
+
+政变半途而废，就意味着死亡，游戏规则如此。不过这事来得如此之快，还是挺有趣的。可见普京多么急于通过杀人来重建威望。
+
+不过我倒是认为，这种暗杀不仅不会重建威望，反而会让人看清他的歇斯底里和孤注一掷。俄罗斯的政局必定会更加混乱，规模更大、态度更坚决的政变，近在眼前。
+- - -
+昨天我在油管上详细讲述了云南有多惨，或许你们会有一种误会，觉得这是中国最惨的省份了。呵呵，你们真是太天真了。
+
+云南的财政收入较峰值年份缩减了30.1%。下面向大家介绍一下广西。各位可以看看下表，广西的财政总收入，2022年的2799亿，较2019年的4344亿，缩减幅度达到35.6%。
+
+并且，2023全年广西的卖地收入预计仅约600亿，总收入预计不超过2500亿。这是直奔腰斩而去了。
+
+没有最惨，只有更惨。这就是中国地区经济的现状。各省市统计局现在已经不再掩饰数据，将惨象血淋淋的摆在各位眼前，就看各位有没有勇气，跟着我一起，逐一揭开真相。
+
+![](/images/20230824001.png)
+- - -
+话说我自从28岁之后，由于工作调动的关系，从来没在一个城市呆满两年，一直在不停的迁居。佛山、惠州、广州、长沙、海口、南宁，又回到广州。本来以为可以在广州长久的待几年，结果时事变幻，不以个人意志为转移，现在又到了香港。
+
+好处是，我东奔西走，亲眼见证了各地的经济，和丰富多彩的人和事。
+
+就我现在的眼光，16年前的自己就跟白纸一样单纯。今时今日，无论什么妖魔鬼怪，只要站在我面前，我都可以一眼看穿本质。
+- - -
+近10年来，手里拿着最好的牌，打出最烂成绩的省份，就是海南。
+
+海南被赋予了完全独立的立法权，和完全自主的征税权。它有权执行任何它认为有必要的改革，不需要事先报批，也就是可以先斩后奏。这种几乎接近自治的地方权力，不知道被多少省份羡慕到流口水。
+
+然而海南什么正事都没干。一件都没有。
+
+海南的官员们只专注的干了一件事：集体贪腐。海南官场已经被集体清洗了两次，中央忍无可忍，甚至从省外空降了数百名干部到海南，整体替换了它县级以上的大部分官员。然而没有任何用处，现在看起来，海南官场马上就要被集体清洗第三次。
+
+海南官场的堕落，大概就是中国政治圈整体堕落的一种象征吧。
+- - -
+瞄了几眼美国那边共和党的总统侯选人首次辩论的新闻，很明显共和党只可能推出特朗普了。舆论倾向太明显了。
+
+民主党方面的候选人当然还是拜登。
+
+在美国历史上，在任总统落选后再次参选，并成功击败对手的例子，只有一个，1884年就任美国第22任总统的克利夫兰。
+
+这哥们跟特朗普的路线非常类似：作风极其强硬，受到官僚体系的集体敌对，在第一任期因为大力改革得罪了所有台面上的政治势力，因此连任不成功。但是普通老百姓非常爱他，并成功在四年后将他再次送进了白宫。
+
+今时今日，台面上的政治势力比一百多年前强大得多，特朗普本人也严重缺乏识人用人的能力，以及灵活的政治手腕。他能不能重复克利夫兰的神话，姑且拭目以待吧。虽然我个人对左派极其厌恶，但是对于特朗普这一次的政治前景，我个人不是很看好就是了。
+
+附图就是以性格强硬闻名的克利夫兰，强硬两个字就好像写在了他脸上似的。
+
+![](/images/20230824002.jpg)
