--- a/source/_posts/第九错（推特号：老蛮频道-2023-08-25-2008-08-28）.md
+++ b/source/_posts/第九错（推特号：老蛮频道-2023-08-25-2008-08-28）.md
@@ -1,4 +1,4 @@
-title: 第九错（推特号：老蛮频道 2023.08.25-2008.08.28）
+title: 第九错（推特号：老蛮频道 2023.08.25-2008.09.01）
 author: laoman
 date: 2023-08-28 06:42:33
 tags:
@@ -141,3 +141,132 @@ P2P割的是他们。
 而中国官方唯一需要付出的代价，只不过是2000多家日资企业撤离，以及依附于它们的二十多万家中国民营企业倒闭，上亿人失业而已。相对于找到一个真正可以立住脚的敌人这一政治第一要务来说，经济？民生？就业？根本就不重要。
 
 ![](/images/20230828010.jpg)
+- - -
+今年1-7月，根据福州海关发布的数据，福建省的出口整体萎缩12.7%，其中7月份的萎缩幅度高达20.2%。
+
+1-7月福建省创造的外贸顺差为292亿美元，相对于去年同期的402亿美元，萎缩幅度高达27.4%。
+
+福建省是东部出口大省，泉州等地的民营制造业，出口能力极其强劲，现在出口不行了，整个制造业都只能随之萎缩，没有任何可挣扎的余地。
+
+我估摸着以后福建就是一个战争基地了，产业这个东西，就不用再指望了。4188万福建人民，不知道是不是甘心做肉盾就是了。
+
+![](/images/20230901001.png)
+
+![](/images/20230901002.png)
+- - -
+股市方面，今天北向资金继续流出，全天流出82亿。周末的所谓四大利好五大利好，北向资金完全不感兴趣。内地很多散户被忽悠得昨天整晚没睡，在网上各种激动不已，一天下来全部被套牢，开盘那一分钟冲进去的白痴，被套了一百多点，也是凄凉。
+
+汇市方面，看起来国家队本来以为可以借股市的力量发起一波反击，结果股市早泄，于是反击计划也跟着痿了。
+
+我再强调一次：今时今日的中国，已经没有了低成本的经济政策可以选。唯有痛入骨髓的政改，才能挽救死亡之中的中国经济。当然政改绝无可能，所以我们继续看戏好了。
+- - -
+韭菜们到现在还没有清晰的认识到，普通国人在整体上已经没有了致富机会。无论在哪个领域，做实业开工厂、开店炒股，全都不可能再致富。
+
+等到韭菜们意识到这一点的时候，他们就连整体温饱的机会，都将丧失。
+
+这就是现实。韭菜永远大幅落后于时代。
+- - -
+8.29
+
+就今时今日的中国来说，民间自发往大使馆扔砖头这种事，是不可想象的，发生概率无限接近零。这么说吧，正常的秩序是：在使馆区附近，你从兜里掏东西的动作稍有异常，就被一拥而上的便衣把你摁倒在地上了。
+
+啊，这事说起来，99年美袭击南联盟大使馆的时候我还在读大学，学校组织去广州美领馆门口扔鸡蛋，我把鸡蛋拿回去了。
+- - -
+上一届的大学毕业生有七成还没找到工作，这一年的大学生又在这两天迈进了大四的行列，开始找工作了。
+
+我相信以现在惨烈的经济形势，今年的大四学生，有九成找不到工作。恭喜他们了。毕竟，每天坚持服用仇日药丸，可以养活自己了啊。
+
+![](/images/20230901003.jpg)
+- - -
+截至到现在，仇日宣传已经持续了整整五天。丝毫没有减弱迹象。
+
+所有的仇恨宣传，最后都只能指向一个最终的结果：战争。
+
+并且由于仇恨不能持久，很快就会疲惫。所以如果顶层在筹划战争，那么它很快就会实施。
+- - -
+一个常识：打台湾必须要占领周边岛链，包括钓鱼岛地区。否则打下台湾不符合中国军方所谓突破“第一岛链限制”的战略诉求。
+
+也就是必然要与日本发生正面冲突。
+- - -
+8.30
+
+目前来说，台湾海峡是由台湾当局实际控制。它的控制权是通过对关键岛群的实际占领而实现。主要是三大岛群：毗邻福州的马祖列岛，毗邻厦门的金门列岛，以及扼守台湾海峡咽喉的澎湖列岛。这三大岛群由台湾控制，对大陆来说，简直是如鲠在喉。
+
+我相信整个大陆的海军指挥官，看着这样的地图，都会有一种发自内心的冲动，要拔除这三颗钉子。
+
+![](/images/20230901005.jpg)
+- - -
+什么叫背道而驰呢？举例来说，中国的老百姓现在处于上有老下有小，工作不稳定，收入没指望的境地，但是经济政策上对于解决他们日益紧迫的稳定收入的问题，毫无兴趣，甚至连考虑都没考虑过。而央行一心期待他们继续加杠杆买房，于是终于解除了一线城市的限贷政策。我个人当然很难理解为什么连央行都一直误会老百姓手里还有很多钱，事实上央行真的是可以通过查后台数据，查到2%的极少数人掌控80%的净存款这一显而易见的事实的。
+
+或许，承认中国的贫富悬殊，远远超过全世界的平均水平，是很羞耻的事，在政策层面绝对不可以泄露一丁点的迹象？
+
+又或者这2%的人，掌控了整个国家的经济政策制定权，所以情愿背道而驰，也不愿意修正财富分配机制，提升老百姓的收入？
+
+我个人认为答案是后者。
+- - -
+当中国不打算继续开放了，对权力阶层来说，其实法律体系本身也没必要维持了。所以近年来法律环境剧烈退化，甚至出现“你一说到法律我就想笑”的政府官员。本来司法体系的整体提升就是加入世贸之后的事，现在世贸体系都快不存在了，还搞法治这一套干什么？
+中国的权力阶层始终都理解不了一件事：其实法治环境，更多的是保护权力阶层的人身安全。社会剧烈动荡时期，权力阶层总是死在前面的。
+
+![](/images/20230901006.jpg)
+- - -
+小常识：在进出海关的时候绝对不要帮任何人拿东西。即使是看到有残疾人背着行李步履蹒跚也不要理。
+- - -
+8.31
+
+香港政府现在向中央表忠心，表得有点过份了。
+
+比如跟风大陆禁止进口日本水产品，其实大陆根本就懒得理睬你香港人爱吃啥好吧。
+
+再比如，香港现在是全世界唯一一个还在使用通行码的地区。大陆海关刚刚都宣布废弃核酸要求了，香港还是坚持搞健康通行码，无码不能过关。
+
+以前的自由港，一步步变成了这样。
+
+![](/images/20230901007.jpg)
+- - -
+任何成熟运行的经济体，无论其大小，都有其运转的既定节奏，不可以被轻易打断。
+小到一个街边士多店和理发店，都要遵循准点开门的规矩，三天两头的延迟开门，让上门的顾客不得其门而入，很快就会倒闭。
+
+商业MALL、酒店和写字楼的运营，更必须按照既定的节奏严格运行，绝不可以轻易打断它们的运行。
+
+至于制造企业的流水生产线、冶矿业的锅炉，更是稍微停一下，就会巨大的损失，重启成本大得令企业无法承受。
+
+每一个大型企业集团都有它独特的运营节奏，比如内部各分公司向集团总部报账的规矩各有不同，这就是它们各自的生机所在。轻易打断一定会造成严重后果。
+
+包括各级政府，也是一样的。管什么不管什么，什么事需要开会，什么事需要去一线调研，做什么事需要多久，都有它固定的规矩和节奏，随意打破必然导致严重的效率问题。
+近十年来，中国政府闲不住的手，打断了所有行业的运行节奏，并且还在持续大段之中。包括各级政府自己的运行节奏，都被打断了。
+
+我以前认为在付出巨大代价之后全社会可以重建新的节奏，前三年看到政府的手极为活跃，并且还以圣手自居。那就根本不可能重建秩序了。
+
+就好像一架飞机，飞行过程被乘客一再的粗暴打断，机长甚至在半空中被赶下飞机，乘客甚至还拿起电锯开始给翅膀改形状。好吧。那就只能空中解体了。
+
+![](/images/20230901008.jpg)
+- - -
+记录一下，央行今天调降了“首套房”的存量按揭贷款利率。大概是从6%降到4.5%，降了1.5%左右。首套房的贷款余额大概占全部按揭贷款总量的一半左右。当然，央行昨天为了对冲本次按揭贷款利率下调的影响，意思性的降了一下存款利率，整体大概降了0.15%，跟没降差不多，根本没有对冲的意义。
+
+好吧，我一再的说，银行的息差现在只有1%出头，并且经营情况普遍极差，被地产商的坏账和地方政府平台债的坏账死死的束缚住，根本承受不起大规模下调贷款利率的影响。
+并且，我给出过预测：只要大规模下调存量房贷，在半年之内，就会出现银行破产潮。尤其是地方性的小银行，会死得更快。
+
+现在，就是命运的齿轮开始转动的时间了。一切都来得好快，犹如暴风骤雨。
+
+还记得今年初的时候，我说今年最好的经济政策，就是什么都不要做，休养生息。呵呵，奈何政府死活管不住自己的手，一定要大有作为。那么，就加速吧。
+- - -
+战争，其实已经离得很近。
+
+对岸知道，这边也知道。
+我的读者们啊，只要你们没有因为恐惧而闭上双眼，只要你们敢于睁开眼睛，其实，也是应该知道的。
+- - -
+9.1
+
+上海票据交易所，每个月都会发布商票违约数据表。七月份之前，银行登陆这个榜单的数量极少。但是七月份之后，一夜之间，就出现了100多家城商行和农商行的商票违约记录。我这里将这些名单全部截取了出来，供各位避雷。
+
+当然，有破产风险的城农商行，远远不止这100多家。
+
+我一再的说，银行系统息差太低，已经无法承受给地方债兜底+给房地产兜底的重担。现在后果已经实质性出现了。谁能想到连银行的商票都可以违约，呵呵呵呵。注意，这一切，只不过是刚刚开始而已。
+
+![](/images/20230901008.png)
+
+![](/images/20230901009.jpg)
+
+![](/images/20230901010.jpg)
+
+![](/images/20230901011.png)
