--- a/source/_posts/摧残（推特号：老蛮频道-2023-09-02-2023-09-07）.md
+++ b/source/_posts/摧残（推特号：老蛮频道-2023-09-02-2023-09-07）.md
@@ -1,4 +1,4 @@
-title: 摧残（推特号：老蛮频道 2023.09.02-2023.09.07）
+title: 摧残（推特号：老蛮频道 2023.09.02-2023.09.10）
 author: laoman
 date: 2023-09-07 21:39:40
 tags:
@@ -161,3 +161,166 @@ tags:
 
 ![](/images/20230907007.png)
 - - -
+中国政府现在唯一真正在推行的经济政策，就是强行要求银行给所有的破产行业兜底——给地产商兜底，给城投债兜底，给按揭贷款降利率，让息差只有1%出头的银行狼狈不堪。于是，根据上海商票网的数据，七月份，有264宗银行发行的商业票据逾期，八月份依然高达216宗。这种银行商票大面积违约的情况，在此前根本就没发生过。
+
+按规律，有任何行业出现了如此大面积的商票逾期，半年内就会出现大面积的企业破产。银行，也不会有例外。
+
+无论银行们现在是多么的不情愿，在发生商票违约后还总是想方设法的还上，把自己挪出下一期的违约清单。但在如此大面积并且已经持续了两个月的违约潮之下，破产，将会是大部分银行的宿命。
+
+给破产的行业兜底，只能是自己也破产。这就是经济规律。中国政府再假装自己万能，也无从对抗的经济规律。
+- - -
+9.8
+
+现在国内的社会风气已经进展到广播寻找医千万不要露面的地步了。
+
+距离底层全面互害又近了一步，可喜可贺。
+- - -
+说起见义勇为的话题，我在五年前就明确建议粉丝们：在中国，绝对绝对绝对，不要见义勇为。
+
+现在我再强调一次，鉴于司法环境的剧烈恶化，在中国，不仅绝对不要见义勇为，乃至发现行凶事件之后，连报警都不要报，赶紧离开，当没见过。
+
+即使事后警方找到你询问当时的情况，不要作证，说你全忘了。
+
+以上。
+- - -
+9.9
+
+委内瑞拉的货币体系已经彻底崩盘，不过它的国民没有出现大规模的饿死现象。原因在于这个国家地广人稀物产丰富，老百姓靠渔猎都能维持生存，于是抛弃了货币，恢复到了“以物易物”的原始阶段。四十斤鱼换一袋奶，五根香蕉理一次发。
+
+我们熟悉的中华民国“金元券”时期也是一样。
+
+民国末期中国的城市化程度极低，广大的农村地区本来就缺乏货币，原始的物物交换本来就占据主流，货币崩盘了，老百姓很快就重建了地下经济秩序，也还能维持生存。
+
+但是现在的中国不行！
+
+现在的中国，连最偏远的山区，老百姓都习惯了微信支付，也就是货币支付。物物交换在中国早已绝迹。现在的中国人口密集物产贫瘠，广大的城市人口连条毛都生产不出来，没有了货币体系的支撑可以说束手无策。唯一可以维持生命的方法，就是把同样处于饥饿之下的邻居一家提前砍死了吃肉。
+
+这就是中国货币体系崩盘之后的后果，并且也是唯一的后果。供各位参考。尽快选好自己可以下刀子的邻居，这一点很有意义。
+- - -
+中国的农民，现在已经完全不会育种，粮食和蔬菜的种苗全是买的。
+
+粪肥已经没人会沤，全靠化肥。
+
+驱虫全靠杀虫剂。
+
+浇水全靠抽水机。
+
+乃至耕田播种收割等等，全都是依靠大大小小的机械。
+
+当经济秩序崩乱，商品交易秩序丧失，货币体系无法维持，那么，农业生产也当然的无法维持，总产量可以瞬间归零。
+
+麻烦在于，即使农业生产可以想尽办法逐渐恢复，但是农业生产有周期，而人不能半年不吃饭。跟企业一样，现金流断了企业就得死，固定资产再多也没用。人七天不吃饭就得饿死，你半年之后再丰收也没有意义。
+
+人为的破坏经济秩序，不尊重经济规律，想搞哪出就搞哪出，连犯八大错还全民叫好。那么，等在中国人前面的，就是被强行进化出半年不吃饭的能力了。如果你觉得自己没有这种进化能力，没关系，你的邻居可以向你提供100来斤高质量肉食。根据历史记载，这些肉很香的。
+- - -
+嗯，我温和了很多年了，所以大概很多人都忘记了，从2017年开始，我的预言一直都是：只要中国丧失经济秩序，那么，中国就必然进入以邻为食的两脚羊时代。
+
+随着我的预言一步步的走近，我的脾气也越来越温和了。与各位即将面对的如此惨烈的未来相比，我其实并不真正愿意和各位发脾气的。
+
+毕竟，我也还留在这里。以后或者各位在我的盘子里，或者我在各位的盘子里，不如温和一点吧。
+- - -
+果然清粉最有效的手段，就是把我“两脚羊教主”的身份摆出来啊。
+
+14万粉了，里面一大堆人至今没搞明白我的立场，整天跟天真无邪的小鸡仔子似的，还有一些白痴居然还整天声称我对中国政府还抱有幻想什么的。真是太搞笑了。
+
+一切的数据分析，都是论证两脚羊时代一步步到来的工具。
+- - -
+到现在为止清了不到两百粉，这远远不够。现在继续。
+
+我一直在说，面对未来，我唯一的建议就是要睁开眼睛，走进黑暗。这到底是什么意思？
+
+黑暗就是，你饥饿的邻居劈开你的家门，把你的全家绑起来准备吃肉。你吓得屎尿横流，疯狂的恳求把你的家人先杀了。你的邻居同意了。
+
+于是，你的邻居每天当着你的面，杀死一个你的家人。你的父母、你的配偶、你的子女，在你的面前挨个被杀死，被烹煮。为了让你多活两天你甚至还被喂了两口汤。在这些时刻，你一定要记得，睁开眼睛。
+
+在最后一天吃得只剩下你的时候，当刀子捅进你的腹部的时候，你也要记得，睁开眼睛。
+
+因为你的眼睛闭了一辈子。所以在最后的黑暗时刻，你一定要睁开眼睛。这是你最后睁开眼睛的机会了。
+- - -
+经常在推上看各路反贼关于中国经济体系坍塌之后后果的种种幻想，真的是太搞笑了。天真得简直不忍卒读。
+
+最常见的幻想就是，只要经济稍微坍塌一下，老百姓就会揭竿而起，推翻中共，建立民主自由文明的新政权。我真的是呵呵了。
+
+中国人的现状是什么？极度的原子化，极度的贪婪和自私。
+
+没有任何有效的社区级的组织，没有任何共同的信仰或者其它心灵链接纽带，除了发财之外没有任何社会共识，没有关于民主政体的任何期待，没有关于民族劣根性的任何讨论。
+
+什么都没有。唯有一个个为了发财不择手段的个体，以及另外一部分对发财绝望之后躺平的个体，本质上也一心想着要发财。仅此而已。
+
+这样的国民，在经济坍塌之后，他们会发起任何政治运动？不会的。他们只会在饥寒交迫之下向邻居举起菜刀，抢夺他们的财产，啃食他们的血肉，这个时候他们脸上还会带着残忍的微笑。而当公权力驾驶着警车来到的时候，他们立刻就会跪在地上，痛哭流涕，诉说自己的不幸遭遇，祈求公权力的怜悯。
+
+对上恭顺，对下残忍，这就是被红色中国改造了七十年后的中国人。推上的反贼们幻想这样的中国人会反抗？对这样极致的幼稚和天真，我每次都觉得十分有趣。
+
+中国已经事实开启的大抑制模型，就是权力控制一切战略资源，并放纵底层居民相互残害的模式。底层越是相互残害，顶层越是安全，乃至稍微出来主持一下公道，就会让底层感恩戴德。这种底层互害的大抑制模式，也就是两脚羊时代，将会长期持续。这就是中国人的宿命。
+
+恭喜所有中国人，这是各位应得的。
+
+呵呵，呵呵，呵呵呵呵。
+- - -
+这个世界的有趣之处就在于，一切客观规律要发生作用，都不会考虑任何个人或者组织的情感因素。
+
+比如说，推上的反贼团们一直都期待着中国经济崩塌，这个事情马上就要实现。但是他们当然也无法接受中国经济崩塌的后果，是长期底层互害的两脚羊时代，而现在的中国政府，反倒会长期控制政权。
+
+这个必然会发生的事实，当然令反贼团们十分沮丧。
+
+当然，在另一方面，中国政府的BOSS们，同样也将十分沮丧。因为自此之后，中国事实上就是被欧美随意啃食的尸体，而中国政府之所以可以长期存续，只不过是因为这个烂摊子绝对不会有任何欧美国家愿意过来接手并输入秩序，从而惹上一身烂麻烦罢了。
+
+无论是现在的反贼，还是现在的中国政府，他们两边在此刻的美好愿景，都将在残酷的现实面前，被冲击得体无完肤。
+- - -
+9.10
+
+我有一个基本判断：当代中国人，从六零后到零零后，统统不可能建立全新的法治政体。
+这其中包括我自己。
+
+我自己这些年来东奔西走耳濡目染，在政府和大型机构里长期厮混，级别还不低，我的权力观和政治观早已被污染，在关键性的决策场合，我一定会选择错误的方向。
+
+无论我个人如何努力吐尽狼奶，污染已经隐藏在灵魂深处。
+
+而全体中国人，所有使用象形文字的中国人，全都已经被污染，没有例外。并且其中的99.9999%，包括在推特上厮混的反贼们，甚至没有意识到自己受到了污染，天真得来又拒绝思考和反省。
+
+呵呵，自从我2017年看明白这件事之后，我就只有一个结论：经济坍塌之后的中国，只能是长期持续的底层互害，在惨烈的自相残杀中，人口猛烈减少，所有人在血与火之中重建三观。要么，就是永坠地狱，要么，就是涅磐重生。
+绝对没有轻轻松松度过这一关的可能性。
+- - -
+有些人幻想着，在中国陷入地狱式的大逃杀模式之后，欧美世界会伸出援手，将中国拖出泥潭，并向中国输出秩序，无私的帮助中国进化为文明国家。
+
+呵呵呵。
+如果是十五年前，还有这种可能性。
+
+这十五年来，欧美世界极左风潮如火如荼，一会儿极端环保，一会儿黑命贵，一会儿同性恋最高贵，乌烟瘴气。
+整个欧美世界在极左风潮之下被撕扯得四分五裂，连政治共识都不存在了。如果不是中国今年自己继续作死，作出了股债汇楼死杀的必死局面，欧美甚至都未必能在危机之狼的追逐下跑赢中国。
+
+就短期来看，极左对欧美政治的巨大破坏，不会停止。极左之下的欧美，没有任何向外输出秩序的能力。如果它们真的跑到大逃杀模式之下的中国，输出黑命贵和性变态更高贵那一套，那么本来死五成就会结束的乱世，将会死到九成以上。剩下几千万中国人，还能守住东南沿海的一点地盘，就算老天垂怜了。
+
+所以，如果真的天佑中华的话，就让中国人自己乱这一把就好了。欧美的极左们就不要跑过来添乱了。他们在自己国内继续作妖就行了。
+- - -
+已知条件如下：
+
+1、日美欧中四大经济体在危机之狼的追逐下夺命狂奔，谁第一个倒下，它的尸体就可以变成其它三家的养分。
+
+2、到现在这一刻，只有中国自己作死作出了股债汇楼四杀的局面，中国成为四大经济体里必死的那一个。
+
+3、中国人高度原子化，国民性情自私自利，除了信仰金钱之外没有任何信仰。也没有任何社会共识。
+
+4、中国已经实现工业化和高度的社会分工，这些都依赖周密运转的社会秩序。一旦经济坍塌，中共无力再维持社会秩序，中国无论工业还是农业生产，都可以在一夜之间归零。
+
+5、欧美在极左思潮的撕扯之下四分五裂，没有任何向死亡之后的中国输出秩序的可能性。
+
+6、结论：等在中国前面的，只能是长期的底层居民的丛林博弈。考虑到中国人在整体上从来都没有真正的道德底线，丛林博弈必然演变成自相残杀。中国，只能进入底层互害的两脚羊时代并长期维持。
+- - -
+话说我早在2017年的年度长文<开不动的印钞机>里，就系统性的预测了今天遇到的所有问题：民营经济的生存环境剧烈恶化，地产泡沫破灭，债务风暴发作，中国被全球化隔绝在外，而中央面对这一切束手无策，连印钞机都因为缺乏适格借款人而无法开动，最终只能无锚印钞，诱发恶性通胀，并最终导致底层互害的“两脚羊时代”降临中国。
+
+这篇文章在当时引发了巨大的轰动。然后，在当时的中国，我经历了无穷无尽的质疑乃至是谩骂。不要说最终对于两脚羊时代的判断，就当时中国经济表面上看起来犹如烈火烹油，在鼠目寸光的普通人看来，怎么可能有全面坍塌的那一天。
+
+呵呵，没关系，那就稍微等一等吧。
+
+接下来就是中美贸易战，三年新冠封控，然后，就是今年的总加速，股债汇楼，四市齐杀。经济坍塌已经事实成型。我预测的前半段已经不会有任何争议。接下来，无非是后半段，底层相互残害的两脚羊时代，会不会真的到来，仅此而已。
+
+我这两天再次向推上的各位新粉讲述两脚羊时代这一中华大地唯一结局的推断。同样的，质疑和谩骂也是不绝于声。一些个被吓得涕泪横流的推民，几乎是声嘶力竭的表达着他们的恐惧，以及不敢相信，其中有很多还是以坚决反共而出名的账号。
+
+没关系，我们一起再等等就可以了。就跟我很有耐心的等待中国经济崩盘一样，也没等多久就实现了。这次，关于两脚羊时代的结局，我们当然也不需要再等多久。呵呵，呵呵，呵呵呵呵。
+- - -
+国内流行讲正能量，在定义上就是必须符合党组织的宣传方向。
+
+在推上则流行讲乐观，在定义上就是：在中国经济坍塌之后共产党必然迅速倒台，并且中国人民不需要为此付出任何代价。
+
+这两者的恶心程度是一样的。后者因为是自发的，大概更恶心一点也说不定。
