--- a/source/_posts/逾期（推特号：老蛮频道-2023-10-11-2023-10-17）.md
+++ b/source/_posts/逾期（推特号：老蛮频道-2023-10-11-2023-10-17）.md
@@ -122,3 +122,9 @@ tags:
 
 ![](/images/20231017001.png)
 - - -
+不知道多少人意识到了，此前那个经济每年都会增长，艺术每年都有创新，科技每年都能进步，工作不开心就随意换工作，高兴了就全球旅游，甚至可以把爱好当成职业的美好时代，已经过去了。
+
+一个时代过去了，而你并没有老去。
+- - -
+**跟踪不易，请洋少喝杯咖啡！！**
+![](/images/zanshang.jpg)
