--- a/source/_posts/王朝末世（推特号：2023-10-24-2023-10-29）.md
+++ b/source/_posts/王朝末世（推特号：2023-10-24-2023-10-29）.md
@@ -1,4 +1,4 @@
-title: 王朝末世（推特号：2023.10.24-2023.10.29）
+title: 王朝末世（推特号：老蛮频道 2023.10.24-2023.10.29）
 author: laoman
 password: mingan
 abstract: 内容敏感，不宜公开，已加密，联系洋少获取密码。
